divide to: re_knowledge

--- a/re_knowledge/IO/concept/接口.md
+++ b/re_knowledge/IO/concept/接口.md
@@ -1,5 +1,87 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+#### 应用程序I/O接口
+
+<ul>
+
+##### **I/O接口的分类**
+
+<ul>
+
+  - **字符设备接口**
+    - 字符设备是指数据的存取和传输是以字符为单位的设备，如键盘、打印机等
+      - 基本特征：传输速率较低、不可寻址
+      - 输入/输出方式：通常采用中断驱动方式
+    - get和put操作
+      - 由于字符设备不可寻址，只能采取顺序存取方式
+      - 用户程序通过get操作从缓冲区获取字符，通过put操作将字符输出到缓冲区
+    - in-control指令
+      - 字符设备类型繁多，差异甚大
+      - 接口中提供一种通用的in-control指令来处理它们
+      - 包含了许多参数，每个参数表示一个与具体设备相关的特定功能
+    - 打开和关闭操作
+      - 字符设备都属于独占设备
+      - 接口中需要提供打开和关闭操作，以实现互斥共享
+
+  - **块设备接口**
+    - 块设备是指数据的存取和传输是以数据块为单位的设备，典型的块设备是磁盘
+      - 基本特征：传输速率较高、可寻址
+      - I/O方式：常采用DMA方式
+    - 隐藏磁盘的二维结构
+      - 在二维结构中，每个扇区的地址需要用磁道号和扇区号来表示
+      - 块设备接口将磁盘的所有扇区从0到 \( n-1 \) 依次编号，将二维结构变为线性序列
+    - 将抽象命令映射为低层操作
+      - 支持上层发来的对文件或设备的打开、读、写和关闭等抽象命令
+      - 将上述命令映射为设备能识别的较低层的具体操作
+    - 内存映射接口
+      - 通过内存的字节数组来访问磁盘，不提供读/写磁盘操作
+      - 映射文件到内存的系统调用返回包含文件副本的一个虚拟内存地址
+      - 只在需要访问内存映像时，才由虚拟存储器实际调页
+      - 访问内存映射文件如同内存读/写一样简单，极大地方便了程序员
+
+  - **网络设备接口**
+    - 现代操作系统都提供面向网络的功能
+      - 需要提供相应的网络软件和网络通信接口
+      - 计算机可以通过网络与其他计算机进行通信或上网浏览
+    - 网络I/O接口
+      - 许多操作系统提供的网络I/O接口为网络套接字接口
+      - 套接字接口的系统调用使应用程序创建的本地套接字连接到远程应用程序创建的套接字
+      - 通过此连接发送和接收数据
+
+</ul>
+
+##### **阻塞I/O & 非阻塞I/O**
+
+<ul>
+
+  - **阻塞I/O**
+    - 当用户进程调用I/O操作时，进程会被阻塞，并移到阻塞队列
+    - I/O操作完成后，进程被唤醒，移到就绪队列
+    - 进程恢复执行时，收到系统调用的返回值，并继续处理数据
+    - 大多数操作系统提供的I/O接口都是采用阻塞I/O
+    - 例子：
+      - 你和女友去奶茶店买奶茶，点完单后，因为不知道奶茶什么时候做好
+      - 所以只能一直等待，其他什么事也不能干
+    - 优点：
+      - 操作简单，实现难度低，适合并发量小的应用开发
+    - 缺点：
+      - I/O执行阶段进程会一直阻塞下去
+
+  - **非阻塞I/O**
+    - 当用户进程调用I/O操作时，不阻塞该进程
+    - 进程需要不断询问I/O操作是否完成，在I/O执行阶段，进程还可以做其他事情
+    - 当问到I/O操作完成后，系统将数据从内核复制到用户空间，进程继续处理数据
+    - 例子：
+      - 你和女友去奶茶店买奶茶，汲取了上次的教训，点完单后顺便逛逛商场
+      - 由于担心错过取餐，所以每隔一段时间就过来询问服务员
+    - 优点：
+      - 进程在等待I/O期间不会阻塞，可以做其他事情，适合并发量大的应用开发
+    - 缺点：
+      - 轮询方式询问I/O结果，会占用CPU的时间
+
+</ul>
+
+</ul>
 
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
