--- a/re_knowledge/IO/concept/软件层次结构.md
+++ b/re_knowledge/IO/concept/软件层次结构.md
@@ -1,6 +1,162 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+### I/O软件层次结构
 
+<ul>
+
+- **I/O软件的作用**
+  - I/O软件的广泛涉及面：
+    - 与硬件有密切关系。
+    - 与虚拟存储器系统相关。
+    - 与文件系统相关。
+    - 与用户直接交互。
+    - 作用是实现I/O操作。
+
+> **pro：I/O子系统各层次的排序及功能（2012、2013）**
+
+- **层次式结构的I/O软件**
+  - I/O软件层次结构的目的：
+    - 实现清晰的结构。
+    - 提高可移植性和易适应性。
+
+  - 层次结构的设计原则：
+    - 将设备管理模块分为多个层次。
+    - 每层利用下层服务完成子功能，并屏蔽实现细节。
+    - 向高层提供服务。
+
+  - 层次结构的好处：
+    - 层间接口不变时，修改某层软件不会影响其他层次。
+    - 仅最低层涉及硬件具体特性。
+
+  - I/O软件层次结构示例：
+    - 一个合理的层次划分：图5.5。
+    - I/O软件系统结构：4个层次。
+    - 各层次及其功能：待详细描述。
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/2c2433d79207718a1762ec1908712367d27b45e0d88f2e784f80227d1447309b.jpg)
+图5.5 I/O层次结构
+
+#### （1）用户层软件
+
+<ul>
+
+- **功能**
+  - 实现与用户交互的接口，用户可直接调用在用户层提供的、与I/O操作有关的库函数，对设备进行操作。
+  - 通常大部分的I/O软件都在操作系统内核，但仍有一小部分在用户层，包括与用户程序链接在一起的库函数。
+  - 用户层I/O软件必须通过一组系统调用来获取操作系统服务。
+
+</ul>
+
+#### （2）设备独立性软件
+
+<ul>
+
+- **功能**
+  - 设备独立性软件的功能：
+  - 实现用户程序与设备驱动器的统一接口。
+  - 设备命名。
+  - 设备保护。
+  - 设备的分配与释放。
+  - 为设备管理和数据传送提供存储空间。
+
+- 设备独立性的含义：
+  - 应用程序使用的设备不局限于某个具体的物理设备。
+
+- 逻辑设备和物理设备的概念：
+  - 引入这两个概念是为了实现设备独立性。
+  - 应用程序中使用逻辑设备名请求设备。
+  - 系统执行时将逻辑设备名映射成物理设备名。
+
+> **pro：设备独立性所涵盖的内容（2020）**
+
+- **好处**
+  - 增加设备分配的灵活性，易于实现I/O重定向，即用于I/O操作的设备可以更换（重定向），而不必改变应用程序。
+- **主要功能**
+  - 执行所有设备的公有操作，包括：
+    - 对设备的分配与回收
+    - 将逻辑设备名映射为物理设备名
+    - 对设备进行保护，禁止用户直接访问设备
+    - 缓冲管理、差错控制
+    - 提供独立于设备的大小统一的逻辑块，屏蔽设备之间信息交换单位大小和传输速率的差异
+  - 向用户层（或文件层）提供统一接口，无论何种设备，它们向用户所提供的接口应是相同的。例如，对各种设备的读/写操作，在应用程序中都统一使用read/write命令等。
+
+</ul>
+
+#### （3）设备驱动程序
+
+<ul>
+
+- **功能**
+  - 设备驱动程序的功能：
+    - 直接与硬件相关，执行系统对设备的操作指令。
+    - 驱动I/O设备工作。
+
+  - 设备驱动程序的存在形式：
+    - 每类设备通常配置一个驱动程序。
+    - 作为I/O进程与设备控制器之间的通信程序。
+    - 通常以进程的形式存在。
+
+  - 设备驱动程序的角色：
+    - 向上层用户程序提供标准接口。
+    - 封装设备具体差别，接收并转换抽象I/O要求（如read和write命令）。
+    - 控制I/O设备工作。
+    - 将设备控制器的信号传送给上层软件。
+    - 隐藏设备控制器之间的差异。
+
+</ul>
+
+#### （4）中断处理程序
+
+<ul>
+
+- **功能**
+  - 中断处理层的作用：
+    - 保存被中断进程的CPU环境。
+    - 转入相应的中断处理程序进行处理。
+    - 处理完毕后恢复被中断进程的现场。
+    - 返回到被中断进程继续执行。
+
+  - 中断处理层的主要任务：
+    - 进行进程上下文的切换。
+    - 对处理中断信号源进行测试。
+    - 读取设备状态和修改进程状态等。
+
+  - 中断处理层的特性：
+    - 与硬件紧密相关。
+    - 对用户而言应尽量屏蔽。
+    - 应放在操作系统的底层。
+    - 系统的其余部分尽可能少地与之发生联系。
+
+> **pro：磁盘I/O操作中各层次的处理过程（2011）**
+
+- **处理过程示例**
+  - 用户读取设备内容的流程：
+
+    1. 用户层：
+       - 用户通过操作系统提供的read命令接口读取设备内容。
+
+    2. 设备独立层：
+       - 解析用户发出的read命令。
+       - 将解析后的命令传递给下层。
+
+    3. 设备驱动层：
+       - 针对不同设备，将read命令解析成不同的指令。
+       - 磁盘与打印机的read命令行为不同。
+
+    4. 中断处理程序：
+       - 中断正在运行的进程。
+       - 执行read命令。
+
+    5. 硬件设备层：
+       - 控制器接收并执行命令。
+       - 完成相应功能。
+
+</ul>
+
+</ul>
+
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
