--- a/re_knowledge/IO/磁盘&固态/固态硬盘.md
+++ b/re_knowledge/IO/磁盘&固态/固态硬盘.md
@@ -1,5 +1,82 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+### 固态硬盘
+
+<ul>
+
+#### 固态硬盘的特性
+
+<ul>
+
+##### 基本结构
+
+<ul>
+
+- 组成：
+  - 闪存芯片
+  - 闪存翻译层
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/cb88f8cf9e4953f156d5cc0c0cdec68d55bd14ebc65d9f36e4c13544b6ab9744.jpg)
+
+</ul>
+
+##### 工作特点
+
+<ul>
+
+- 读写单位：以页为单位
+- 写入限制：需要先擦除整个块
+- 性能特点：
+  - 随机写入较慢
+  - 无机械部件
+  - 能耗低
+  - 抗震性好
+
+</ul>
+
+</ul>
+
+#### 磨损均衡
+
+<ul>
+
+##### 问题
+
+<ul>
+
+- 闪存擦写寿命有限
+- 磨损不均衡导致整块损坏
+
+</ul>
+
+##### 解决方案
+
+<ul>
+
+###### 动态磨损均衡
+
+<ul>
+
+- 写入时选择较新闪存块
+
+</ul>
+
+###### 静态磨损均衡
+
+<ul>
+
+- 自动监测数据分配
+- 平衡各闪存块使用
+
+</ul>
+
+</ul>
+
+</ul>
+
+</ul>
+
+</ul>
 
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
