--- a/re_knowledge/IO/磁盘&固态/磁盘 管理/管理.md
+++ b/re_knowledge/IO/磁盘&固态/磁盘 管理/管理.md
@@ -1,6 +1,99 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+### 磁盘的管理
 
+<ul>
+
+> **pro：新磁盘安装操作系统的过程（2021）**
+
+#### 磁盘初始化
+
+<ul>
+
+> **pro：物理格式化的内容（2017、2021）**
+
+- 低级格式化（物理格式化）过程
+  - 目的：使磁盘控制器能进行读/写操作
+  - 扇区组成
+    - 头部
+    - 数据区域
+    - 尾部
+  - 控制信息
+    - 磁道号、磁头号和扇区号标识
+    - CRC校验字段
+
+</ul>
+
+#### 分区
+
+<ul>
+
+> **pro：逻辑格式化的内容（2017、2021）**
+
+- 分区步骤
+  - 物理分区
+    - 由一个或多个柱面组成
+    - 分区信息记录在主引导记录
+  - 逻辑格式化（高级格式化）
+    - 建立文件系统数据结构
+    - 初始化目录和空间管理
+
+- 簇的概念
+  - 多个相邻扇区的组合
+  - 文件存储特点
+    - 一簇只能存放一个文件
+    - 占用空间必须是簇的整数倍
+
+</ul>
+
+#### 引导块
+
+<ul>
+
+- 系统启动过程
+  - 初始化程序（自举程序）功能
+    - 初始化硬件
+    - 加载操作系统
+
+- 引导程序存储
+  - ROM中存储小型自举装入程序
+  - 磁盘启动块存储完整引导程序
+
+- Windows引导过程
+  - 主引导记录（MBR）位于第0号扇区
+    - 包含引导代码
+    - 包含分区表
+    - 包含引导标志
+  - 引导过程
+    - ROM代码读取MBR
+    - 定位引导分区
+    - 读取引导扇区
+    - 加载系统服务
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/b7c95873944cd60dc13dbc53e4afbb793e28c58949c335a8d0cf871b51830251.jpg)
+图5.17Windows磁盘的引导
+
+</ul>
+
+#### 坏块
+
+<ul>
+
+- 坏块产生原因
+  - 磁盘有移动部件
+  - 容错能力弱
+
+- 坏块处理方式
+  - 简单磁盘（IDE控制器）
+    - 手动处理
+    - FAT表标记
+  - 复杂磁盘
+    - 控制器维护坏块列表
+    - 使用备用块替代（扇区备用）
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
