--- a/re_knowledge/IO/磁盘&固态/调度算法.md
+++ b/re_knowledge/IO/磁盘&固态/调度算法.md
@@ -1,5 +1,195 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+### 磁盘调度算法
+
+<ul>
+
+#### 磁盘的存取时间
+
+<ul>
+
+##### 时间组成
+
+<ul>
+
+- 一次磁盘读/写操作的时间由三部分决定：
+
+  ###### 寻道时间 $T_s$
+
+  <ul>
+
+  - 将磁头移动到目的磁道所需的时间
+  - 计算公式：$T_{s}=\boldsymbol{m}\!\times\!\boldsymbol{n}+\!s$
+    - $m$ 是磁盘驱动器速度常数(约0.2ms)
+    - $s$ 是磁头臂启动时间(约2ms)
+
+  </ul>
+
+  ###### 旋转延迟时间 $T_{r}$
+
+  <ul>
+
+  - 磁头定位到要读/写扇区所需的时间
+  - 计算公式：$T_{\mathrm{r}}\,{=}\,\frac{1}{2r}$
+  - 典型值：
+    - 硬盘(5400转/分)：$T_{\mathrm{r}}$ 为5.55ms
+    - 软盘(300~600转/分)：$T_{\mathrm{r}}$ 为50~100ms
+
+  </ul>
+
+  ###### 传输时间 $T_{\mathrm{t}}$
+
+  <ul>
+
+  - 读出或写入数据所需的时间
+  - 计算公式：$T_{\mathrm{t}}=\frac{b}{r N}$
+    - $r$ 为每秒转数
+    - $N$ 为一个磁道上的字节数
+    - $b$ 为读/写字节数
+
+  </ul>
+
+</ul>
+
+##### 总平均存取时间
+
+<ul>
+
+- 计算公式：$T_{\mathrm{a}}=T_{\mathrm{s}}+{\frac{1}{2r}}+{\frac{b}{r N}}$
+- 特点：
+  - 寻道时间占主要部分
+  - 延迟时间和传输时间与转速线性相关
+  - 磁盘调度主要目标是减少平均寻道时间
+
+</ul>
+
+</ul>
+
+#### 磁盘调度算法
+
+<ul>
+
+##### FCFS算法
+
+<ul>
+
+- 特点：按请求先后顺序进行调度
+- 优点：具有公平性
+- 性能：
+  - 少量进程访问时性能较好
+  - 大量进程竞争时接近随机调度
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/b8425ee5ae7ac3a0dcb06de61cb27fd6d3cb2c582e4f386dd8f6304e4a02e448.jpg)
+
+</ul>
+
+##### SSTF算法
+
+<ul>
+
+> **pro：磁盘调度STTF算法的应用（2019、2021）**
+
+- 特点：选择与当前磁头最近的磁道
+- 优点：比FCFS提供更好性能
+- 缺点：可能产生饥饿现象
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/dd06b9fc1246a34569fc5258e8248c831db19702f82bda8b3c8ac1f790936d8f.jpg)
+
+</ul>
+
+##### SCAN算法
+
+<ul>
+
+> **pro：磁盘调度SCAN算法的应用（2009、2010、2015）**
+
+- 特点：
+  - 规定磁头移动方向
+  - 类似电梯运行方式
+- 缺点：对最近扫描区域不公平
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/e23ff7834fc7dfb47ca7bc3bb816adfab1acd589aaf1e86fdaa754dd62d5b6c2.jpg)
+
+</ul>
+
+##### C-SCAN算法
+
+<ul>
+
+> **pro：磁盘高度CSCAN算法的应用（2024）**
+
+- 特点：
+  - 磁头单向移动服务
+  - 返回时快速移动不服务
+- 改进：避免SCAN算法的偏向性
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/f7b3b0423047721711f42f621ef0d8fa676a86199461550c1a35cce3dcbc5774.jpg)
+
+</ul>
+
+##### LOOK和C-LOOK算法
+
+<ul>
+
+- LOOK调度：改进的SCAN算法
+- C-LOOK调度：改进的C-SCAN算法
+- 特点：只移动到最远端请求位置
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/0b7af4079ce1508170cfd0c6785a935c544146c6fba1615004413e098e803166.jpg)
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/1361b6282bbb7ccca8e902c8b775efe191ce31127575de272a9b094e4bb963ad.jpg)
+
+表5.2四种磁盘调度算法的优缺点
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/306473ea1dc03b13f75a7b4b6cbbcb37604ee92c9a16855a4334e74fb2115f52.jpg)
+
+</ul>
+
+</ul>
+
+#### 减少延迟时间的方法
+
+<ul>
+
+##### 扇区交替编号
+
+<ul>
+
+- 目的：减少连续块读取的延迟时间
+- 方法：逻辑相邻块在物理上保持间隔
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/83716c397933becb5f3149d21af881a9f2546dee402d24683822bd761c10df62.jpg)
+
+</ul>
+
+##### 盘面错位命名
+
+<ul>
+
+- 目的：减少不同盘面连续块读取的延迟时间
+- 方法：对不同盘面进行错位编号
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/b4df78520dc3118e1f94059fd6b9289b5f4251ad8466d09eec81bd5d52552ff9.jpg)
+
+</ul>
+
+</ul>
+
+#### 提高磁盘I/O速度的方法
+
+<ul>
+
+> **pro：改善磁盘I/O性能的方法（2012、2018）**
+
+- 采用磁盘高速缓存
+- 调整磁盘请求顺序
+- 提前读
+- 优化物理块分布
+- 使用虚拟盘
+- 采用磁盘阵列RAID
+
+</ul>
+
+</ul>
 
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
