--- a/re_knowledge/IO/设备独立性软件/spooling 接口/设备驱动程序接口.md
+++ b/re_knowledge/IO/设备独立性软件/spooling 接口/设备驱动程序接口.md
@@ -1,5 +1,49 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+### 设备驱动程序接口
+
+<ul>
+
+> **pro：设备驱动程序的功能（2013、2019、2023）**
+
+##### 基本功能
+
+<ul>
+
+- 命令转换与参数处理
+- 请求合法性检查
+- I/O操作控制
+- 中断处理
+
+</ul>
+
+> **pro：设备驱动程序的特点（2022）**
+
+##### 程序特点
+
+<ul>
+
+- 实现I/O请求转换
+- 与I/O控制方式相关
+- 硬件相关性强
+- ROM固化实现
+- 支持多次调用
+
+</ul>
+
+##### 接口统一要求
+
+<ul>
+
+- 标准化操作系统接口
+- 设备名称转换机制
+- 设备访问保护
+
+</ul>
+
+</ul>
+
+</ul>
 
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
