--- a/re_knowledge/IO/设备独立性软件/缓存 分配/高速缓存与缓冲区.md
+++ b/re_knowledge/IO/设备独立性软件/缓存 分配/高速缓存与缓冲区.md
@@ -1,6 +1,358 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+### 高速缓存与缓冲区
 
+<ul>
+
+#### 磁盘高速缓存（DiskCache）
+
+<ul>
+
+##### 目的：
+
+<ul>
+
+>pro:  **设置磁盘缓冲区的目的（2015）**
+  - 提高磁盘的访问**速度**
+<br>
+  
+  - 例如，
+    - 正在运行进程的数据既存储在磁盘上
+      - 又存储在物理内存上
+      - 也被复制到CPU的二级和一级高速缓存中
+  - DiskCache
+    - **不同于**通常意义下的 btween CPU and 内存之间的 <span style="color: LightSkyBlue;">小容量</span>高速存储器
+    - 指utilize 
+      - 内存中的存储空间
+      - 来暂存从磁盘中读出的一系列盘块中的信息
+  -  → 磁盘高速缓存
+     -  逻辑上属于磁盘
+     -  物理上则是驻留在内存中的盘块
+
+</ul>
+
+##### **磁盘高速缓存的形式**
+
+<ul>
+
+  - 两种形式
+    - 在内存中开辟一个单独的空间作为缓存区
+      - 大小固定
+    - 将未利用的内存空间作为一个缓冲池
+      - 供请求分页系统和磁盘I/O时共享
+
+</ul>
+
+</ul>
+
+#### 缓冲区（Buffer）
+
+<ul>
+
+- **引入缓冲区的目的**
+  - 缓和CPU与I/O设备间速度不匹配的矛盾
+  - 减少对CPU的中断频率，放宽对CPU中断响应时间的限制
+  - 解决基本数据单元大小（数据粒度）不匹配的问题
+  - 提高CPU和I/O设备之间的并行性
+
+- **缓冲区的实现方法**
+  - 采用硬件缓冲器
+    - 但由于成本太高，除一些关键部位外，一般不采用硬件缓冲器
+  - 利用内存作为缓冲区
+    - 根据系统设置缓冲区的个数，缓冲技术可以分为如下几种：
+
+##### 单缓冲
+
+<ul>
+
+###### 基本概念与原理
+
+<ul>
+
+- 缓冲区分配
+  - 每当用户进程发出I/O请求时
+    - 操作系统在内存中分配一个缓冲区
+      - 缓冲区大小通常为一个块
+
+- 数据输入处理流程
+  - 时间参数
+    - T: 设备输入数据到缓冲区的时间
+    - M: 数据从缓冲区传送到工作区的时间
+    - C: CPU处理数据的时间
+  - 工作限制
+    - 必须等待缓冲区装满后才能取出数据
+
+  ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/0098ff41721b50a7f2f4813f3e810d1abfc0d5ac0327fc9235418282ddd0eaa2.jpg)
+  - 图5.6单缓冲工作示意图
+
+</ul>
+
+###### 工作时间的理解与计算
+
+<ul>
+
+> **pro：单缓冲的工作时间的理解与计算（2011、2013）**
+
+- 并行特性
+  - 在单缓冲区中， $T$ 是可以和 $C$ 并行的
+
+- 两种工作情况分析
+  - 情况1：$T>C$ (设备输入时间较长)
+    - CPU处理一块完数据后，需等待缓冲区装满
+    - 平均处理一块数据的时间为 $\scriptstyle{T+M}$
+  
+  - 情况2：$T<C$ (CPU处理时间较长) 
+    - 缓冲区装满后需等待CPU处理完成
+    - 平均处理一块数据的时间为 $C+M$
+
+- 总结
+  - 单缓冲区处理每块数据的平均时间为 $\mathrm{Max}(C,T)+M$
+
+</ul>
+
+###### 资源互斥
+
+<ul>
+
+- 缓冲区作为共享资源的限制
+  - 若CPU尚未取走缓冲区中的数据，则即使设备又生产出新的数据，也无法将其送入缓冲区
+  - 此时设备需要等待
+
+</ul>
+
+</ul>
+
+##### 双缓冲
+
+<ul>
+
+###### 基本概念与目的
+
+<ul>
+
+- 为了加快输入和输出速度，提高设备利用率，引入了双缓冲机制，也称缓冲对换
+
+</ul>
+
+###### 工作原理
+
+<ul>
+
+- 数据输入过程
+  - 设备数据首先送入缓冲区1，装满后转向缓冲区2
+  - 操作系统从缓冲区1取出数据，送入用户进程进行CPU处理
+  - 当缓冲区1数据处理完成后：
+    - 若缓冲区2已满，则从缓冲区2取数据处理
+    - 同时设备可继续向缓冲区1输入数据
+
+###### 优势
+
+- 提高了设备和CPU的并行程度
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/74916f63bbadd3ecec51c79d9d7983076a15ba312169b06e359201300d17cbd5.jpg)
+- 图5.7双缓冲工作示意图
+
+</ul>
+
+</ul>
+
+##### 双缓冲的工作时间理解与计算
+
+<ul>
+
+> **pro：双缓冲的工作时间的理解与计算（2011）**
+
+###### 双缓冲区的并行特性
+
+<ul>
+
+- 在双缓冲区中，$C$ 和 $M$ 是可以与 $T$ 并行的
+
+</ul>
+
+###### 两种工作情况分析
+
+<ul>
+
+- 情况1：$T>C+M$ (设备输入时间较长)
+  - 特点：设备输入的时间比数据传送和处理的时间多，可使设备连续输入
+  - 工作过程：
+    - 初始状态：缓冲区1空，缓冲区2满
+    - 并行操作：
+      - 缓冲区2向工作区传送数据
+      - 缓冲区1开始装入数据
+    - 时间计算：
+      - 传送并处理时间为 $C+M$
+      - 必须等待缓冲区1装满
+      - 平均处理一块数据的时间为T
+
+- 情况2：$T<C+M$ (CPU处理时间较长)
+  - 特点：设备输入的时间比数据传送和处理的时间少，可使CPU不必等待设备输入
+  - 工作过程：
+    - 初始状态：缓冲区1空，缓冲区2满
+    - 并行操作：
+      - 缓冲区2向工作区传送数据
+      - 缓冲区1开始装入数据
+    - 时间计算：
+      - 缓冲区1装满用时为 $T$
+      - 需等待缓冲区2数据处理完成
+      - 平均处理一块数据的时间为 $C+M$
+
+</ul>
+
+###### 总结
+
+<ul>
+
+- 双缓冲区处理每块数据的平均时间为 $\operatorname{Max}(C+M,T)$
+
+</ul>
+
+###### 双机通信中的缓冲设置
+
+<ul>
+
+- 单缓冲限制：
+  - 仅配置单缓冲时只能实现单方向数据传输
+  - ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/9f47ca6462f4c404f4194111c41c4ca49f03430e3edac630d53319bd8b859779.jpg)
+  - 图5.8双机通信时缓冲区的设置
+- 双向传输解决方案：
+  - 每台机器需设置两个缓冲区：
+    - 一个用作发送缓冲区
+    - 一个用作接收缓冲区
+
+</ul>
+
+</ul>
+
+</ul>
+
+##### 循环缓冲
+
+<ul>
+
+###### 循环缓冲的引入背景
+
+<ul>
+
+- 双缓冲机制的局限性：
+  - 当输入与输出速度基本匹配时效果较好
+  - 当速度相差较大时效果不理想
+- 解决方案：
+  - 引入多缓冲机制
+  - 采用循环缓冲区形式
+  - ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/1567ec3a07d06f813ba74bebbedc891cf49d9587682fd38dc0cd9f2ccb14a9fb.jpg)
+  - 图5.9循环缓冲工作示意图
+
+</ul>
+
+###### 循环缓冲的结构特点
+
+<ul>
+
+- 缓冲区组成：
+  - 包含多个大小相等的缓冲区
+  - 每个缓冲区通过链接指针连接
+    - 指向下一个缓冲区
+    - 最后一个指向第一个，形成循环队列
+- 指针设置：
+  - in指针：
+    - 指向第一个可输入数据的空缓冲区
+    - 输入时沿链接方向循环移动
+  - out指针：
+    - 指向第一个可提取数据的满缓冲区
+    - 输出时沿链接方向循环移动
+
+</ul>
+
+</ul>
+
+##### 缓冲池
+
+<ul>
+
+###### 缓冲池的定义与特点
+
+<ul>
+
+- 相比于缓冲区（仅是一块内存空间），缓冲池具有以下特点：
+  - 包含管理自身的数据结构和操作函数
+  - 是一种管理多个缓冲区的机制
+  - 可供多个进程共享使用
+
+</ul>
+
+###### 缓冲池的组成结构
+
+<ul>
+
+- 缓冲区分类：
+  - 按使用状况分为三种队列：
+    - 空缓冲队列：由空缓冲区链接而成
+    - 输入队列：由装满输入数据的缓冲区链接而成
+    - 输出队列：由装满输出数据的缓冲区链接而成
+  - 四种工作缓冲区：
+    - hin：用于收容输入数据
+    - sin：用于提取输入数据
+    - hout：用于收容输出数据
+    - sout：用于提取输出数据
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/d289d35f48846a698b12364bd9fc16928286068c4b2382e62ec3fc3de069c555.jpg)
+
+</ul>
+
+###### 缓冲池的工作方式
+
+<ul>
+
+- 收容输入过程：
+  - 输入进程需要输入数据时：
+    - 从空缓冲队列队首摘下空缓冲区作为收容输入工作缓冲区
+    - 将数据输入其中
+    - 装满后将其挂到输入队列队尾
+- 提取输入过程：
+  - 计算进程需要输入数据时：
+    - 从输入队列队首取得缓冲区作为提取输入工作缓冲区
+    - 从中提取数据
+    - 用完数据后将其挂到空缓冲队列队尾
+- 收容输出过程：
+  - 计算进程需要输出数据时：
+    - 从空缓冲队列队首取得空缓冲区作为收容输出工作缓冲区
+    - 装满数据后将其挂到输出队列队尾
+- 提取输出过程：
+  - 输出进程需要输出数据时：
+    - 从输出队列队首取得满缓冲区作为提取输出工作缓冲区
+    - 数据提取完后将其挂到空缓冲队列队尾
+
+</ul>
+
+###### 说明
+
+<ul>
+
+- 对于循环缓冲和缓冲池：
+  - 仅定性介绍其机理
+  - 不进行定量研究处理时间
+- 对于单缓冲和双缓冲：
+  - 可按模板分析解决任何情况下的数据块处理时间问题
+
+</ul>
+
+</ul>
+
+</ul>
+
+#### 高速缓存与缓冲区的对比
+
+<ul>
+
+- 高速缓存是可以保存数据拷贝的高速存储器，访问高速缓存比访问原始数据更高效，速度更快
+- 高速缓存和缓冲区的对比见表5.1
+  - ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/c9e3499e84e502be34fe26707f8ea3406ae442f8b0a1385c94431ed9d0b18a22.jpg)
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
