--- a/re_knowledge/concept/concept/概念.md
+++ b/re_knowledge/concept/concept/概念.md
@@ -1,6 +1,33 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 概念  
+<ul>
+- 操作系统（OperatingSystem，OS）
+  - 控制和管理整个计算机系统的硬件与软件资源
+  - 合理地组织、调度计算机的工作与资源的分配
+  - moreover为用户和其他软件提供方便接口与环境的**程序集合**
 
+- OS：计算机系统中 最**基本** 的 系统软件
+- 计算机系统(自下而上)
+  - 硬件
+  - **OS**
+    - 管理各种计算机硬件，为应用程序提供**基础**，并且充当计算机硬件与用户之间的**中介** 
+    - 控制和协调各用户的应用程序对硬件的分配与使用，提供了正确使用这些资源的**方法**  
+  - 应用程序和用户
+  
+  （这里的划分与 计算机组成原理中的分层不同）
+
+</ul>
+
+---
+
+<ul>
+
+硬件（中央处理器、内存、输入/输出设备等）提供基本的**计算资源**
+
+应用程序（字处理程序、电子制表软件、编译器、网络浏览器等）规定按何种**方式**使用这些资源来解决用户的计算问题
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
