--- a/re_knowledge/concept/concept/目标和功能.md
+++ b/re_knowledge/concept/concept/目标和功能.md
@@ -1,5 +1,124 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 目标和功能  
+
+<ul>
+
+### 操作系统作为计算机系统资源的管理者  
+
+<ul>
+
+#### 处理机管理  
+- 多道程序环境下的管理特点：
+  - 以进程(或线程)为基本单位进行分配和运行
+  - 并发运行多个进程
+- 主要管理任务：
+  - 进程创建与撤销时机
+  - 进程管理方式
+  - 冲突避免
+  - 合理共享
+- 核心功能：
+  - 进程控制
+  - 进程同步
+  - 进程通信
+  - 死锁处理
+  - 处理机调度
+
+#### 存储器管理  
+- 管理目标：
+  - 为多道程序提供良好运行环境
+  - 方便用户使用
+  - 提高内存利用率
+- 主要功能：
+  - 内存分配与回收
+  - 地址映射
+  - 内存保护与共享
+  - 内存扩充
+
+#### 文件管理  
+- 基本概念：
+  - 计算机信息以文件形式存在
+  - 负责管理的部分称为文件系统
+- 管理内容：
+  - 文件存储空间管理
+  - 目录管理
+  - 文件读写管理和保护
+
+#### 设备管理  
+- 主要任务：
+  - 完成用户I/O请求
+  - 方便用户使用各种设备
+  - 提高设备利用率
+- 核心功能：
+  - 缓冲管理
+  - 设备分配
+  - 设备处理
+  - 虚拟设备
+
+</ul>
+
+### 操作系统作为用户与计算机硬件系统之间的接口  
+
+<ul>
+
+#### 命令接口  
+##### 联机命令接口
+- 特点：
+  - 又称交互式命令接口
+  - 适用于分时或实时系统
+  - 由键盘操作命令组成
+- 工作流程：
+  - 用户通过控制台输入命令
+  - 命令解释程序解释执行
+  - 完成指定功能后返回控制权
+
+##### 脱机命令接口
+- 特点：
+  - 又称批处理命令接口
+  - 适用于批处理系统
+  - 由作业控制命令组成
+- 工作方式：
+  - 用户提前准备作业操作说明书
+  - 系统调度执行时逐条解释执行
+  - 间接控制作业运行
+
+#### 程序接口  
+>pro：操作系统为应用程序提供的接口（2010）  
+
+- 组成：
+  - 由系统调用(广义指令)组成
+- 功能：
+  - 请求操作系统服务
+  - 使用外部设备
+  - 申请分配和回收内存
+
+##### 图形用户界面(GUI)
+- 特点：
+  - 当前最流行的接口形式
+  - 通过程序接口实现
+  - 支持鼠标和键盘操作
+- 性质：
+  - 不是操作系统的一部分
+  - 系统调用命令属于操作系统
+
+</ul>
+
+### 操作系统实现了对计算机资源的扩充  
+<ul>
+- 裸机概念：
+  - 无软件支持的计算机
+  - 构成计算机系统的物质基础
+- 扩充机器特点：
+  - 经过软件改造的计算机系统
+  - 操作系统提供资源管理功能
+  - 提供方便用户的服务功能
+  - 也称为虚拟机
+  
+</ul>
+
+</ul>
+
+</ul>
 
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
