--- a/re_knowledge/concept/发展历程/个人.md
+++ b/re_knowledge/concept/发展历程/个人.md
@@ -1,6 +1,27 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 个人计算机操作系统
+<ul>
+- 应用范围：
+  - 文字处理
+  - 电子表格
+  - 游戏
+- 常见系统：
+  - Windows
+  - Linux
+  - MacOS
 
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/f0b0a74fe593824117427da27a54272d9549040a746ec72171a717ad41491567.jpg)
+图1.1操作系统的发展历程
+
+- 其他类型：
+  - 嵌入式操作系统
+  - 服务器操作系统
+  - 智能手机操作系统
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
