--- a/re_knowledge/concept/发展历程/分时.md
+++ b/re_knowledge/concept/发展历程/分时.md
@@ -1,5 +1,25 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 分时操作系统
+<ul>
+- 基本概念：
+  - 将处理器运行时间分成短时间片
+  - 按时间片轮流分配给各联机作业
+- 系统特点：
+  - 多个用户通过终端同时共享主机
+  - 用户可同时交互操作互不干扰
+- 主要特征：
+  - 同时性（多路性）
+    - 允许多个终端用户同时使用
+  - 交互性
+    - 用户通过终端直接控制程序运行
+  - 独立性
+    - 多个用户彼此独立操作
+    - 互不干扰
+  - 及时性
+    - 用户请求能快速获得响应
+
+</ul>
 
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
