--- a/re_knowledge/concept/发展历程/实时.md
+++ b/re_knowledge/concept/发展历程/实时.md
@@ -1,5 +1,22 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 实时操作系统
+<ul>
+- 系统目的：
+  - 在时间限制内完成紧急任务
+  - 无需时间片排队
+- 系统分类：
+  - 硬实时系统
+    - 必须在规定时刻完成任务
+    - 如飞行器自动控制系统
+  - 软实时系统
+    - 可接受偶尔违反时间规定
+    - 如飞机订票系统、银行管理系统
+- 主要特点：
+  - 及时性
+  - 可靠性
+
+</ul>
 
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
