--- a/re_knowledge/concept/发展历程/手工操作.md
+++ b/re_knowledge/concept/发展历程/手工操作.md
@@ -1,5 +1,22 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 手工操作阶段（此阶段无操作系统）
+<ul>
+- 操作特点：
+  - 用户在计算机上算题的所有工作都要人工干预
+  - 如程序的装入、运行、结果的输出等
+- 问题：
+  - 随着计算机硬件的发展，人机矛盾越来越大
+  - 必须寻求新的解决办法
+- 主要缺点：
+  - 用户独占全机
+    - 不会出现因资源已被其他用户占用而等待的现象
+    - 但资源利用率低
+  - CPU等待手工操作，CPU的利用不充分
+- 解决方案：
+  - 用高速的机器代替相对较慢的手工操作来对作业进行控制
+
+</ul>
 
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
