--- a/re_knowledge/concept/发展历程/批处理.md
+++ b/re_knowledge/concept/发展历程/批处理.md
@@ -1,6 +1,77 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 批处理阶段（操作系统开始出现）
+<ul>
+- 产生原因：
+  - 解决人机矛盾及CPU和I/O设备之间速度不匹配的矛盾
+- 发展阶段：
+  - 单道批处理系统
+  - 多道批处理系统（多道程序设计技术出现以后）
 
+>pro：批处理系统的特点（2016）
+
+### 单道批处理系统
+<ul>
+- 实现方式：
+  - 先将一批作业以脱机方式输入磁带
+  - 配上监督程序（Monitor）
+  - 在其控制下批量处理作业
+- 主要特征：
+  - 自动性
+    - 磁带上的一批作业能自动地逐个运行
+    - 无须人工干预
+  - 顺序性
+    - 磁带上的各道作业顺序地进入内存
+    - 先调入内存的作业先完成
+  - 单道性
+    - 内存中仅有一道程序运行
+    - 监督程序每次从磁带上只调入一道程序
+    - 程序完成或异常时才换入后继程序
+- 存在问题：
+  - 每次内存中仅存放一道作业
+  - CPU需等待I/O完成，资源利用率低
+
+</ul>
+
+### 多道批处理系统
+<ul>
+- 工作原理：
+  - 作业先存放在外存并排队
+  - 作业调度程序选择作业调入内存
+  - 多个作业在管理程序控制下穿插运行
+  - 共享系统硬软件资源
+
+>pro：多道批处理系统的特点（2017、2018、2022）
+
+#### 多道程序设计特点
+- 多道
+  - 内存中同时存放多道相互独立的程序
+- 宏观上并行
+  - 多道程序同时处于运行过程中
+  - 但都未运行完毕
+- 微观上串行
+  - 多道程序轮流占有CPU
+  - 交替执行
+
+#### 实现问题
+- 处理器分配
+- 多道程序内存分配
+- IO设备分配
+- 程序和数据的组织存放
+
+#### 系统评价
+- 优点：
+  - 资源利用率高
+  - 系统吞吐量大
+- 缺点：
+  - 用户响应时间较长
+  - 不提供人机交互能力
+
+>attention:  2018年真题考查的多任务操作系统可视为具有交互性的多道批处理系统。
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
