--- a/re_knowledge/concept/引导.md
+++ b/re_knowledge/concept/引导.md
@@ -1,5 +1,67 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+#### 引导  
+
+<ul>
+- 操作系统（如Windows、Linux等）是一种程序
+  - 程序以数据的形式存放在硬盘中
+  - 硬盘通常分为多个区
+  - 一台计算机中可能有多个或多种外部存储设备
+- 操作系统引导过程
+  - 计算机利用CPU运行特定程序
+  - 通过程序识别硬盘
+  - 识别硬盘分区
+  - 识别硬盘分区上的操作系统
+  - 最后通过程序启动操作系统
+
+>pro：操作系统的引1导过程（2021）  
+
+##### 常见操作系统的引导过程
+- $\textcircled{\scriptsize{1}}$ 激活CPU
+  - 激活的CPU读取ROM中的boot程序
+  - 将指令寄存器置为BIOS的第一条指令
+  - 开始执行BIOS的指令
+
+>pro：操作系统引|导过程中创建的数据结构（2022）  
+
+- $\circledcirc$ 硬件自检
+  - BIOS程序在内存构建中断向量表
+  - 进行通电自检
+    - 检查硬件是否出现故障
+    - 如有故障，主板发出蜂鸣，启动中止
+    - 如无故障，显示系统信息
+
+- $\textcircled{3}$ 加载带有操作系统的硬盘
+  - BIOS读取BootSequence
+  - 将控制权交给首位存储设备
+  - CPU加载引导扇区内容到内存
+
+- $\textcircled{4}$ 加载主引导记录（MBR）
+  - 通过标识符区分引导硬盘
+  - 检查可引导设备
+  - MBR指示CPU寻找操作系统位置
+
+- $\circledast$ 扫描硬盘分区表和加载活动分区
+  - MBR包含硬盘分区表
+  - 识别含有操作系统的活动分区
+  - 加载活动分区并交接控制权
+
+- $\circledcirc$ 加载分区引导记录（PBR）
+  - 读取活动分区第一个扇区
+  - 寻找并激活引导程序
+
+- $\textcircled{\scriptsize{2}}$ 加载启动管理器
+  - 分区引导记录搜索启动管理器
+  - 加载启动管理器
+
+>pro：操作系统运行的存储器（2013）  
+
+- $\textcircled{8}$ 加载操作系统
+  - 将操作系统初始化程序加载到内存执行
+
+</ul>
+
+</ul>
 
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
