--- a/re_knowledge/concept/虚拟机.md
+++ b/re_knowledge/concept/虚拟机.md
@@ -1,6 +1,79 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+#### 虚拟机  
 
+<ul>
+
+##### 基本概念  
+<ul>
+- 虚拟机定义
+  - 利用虚拟化技术将物理机器虚拟化为多台虚拟机器
+  - 隐藏实际物理特性
+  - 提供抽象、统一、模拟的计算环境
+
+</ul>
+
+##### 第一类虚拟机管理程序  
+<ul>
+- 特点
+  - 运行在最高特权级
+  - 在裸机上运行
+  - 具备多道程序功能
+- 功能
+  - 向上层提供虚拟机
+  - 虚拟机是裸机硬件的精确复制品
+  - 可运行不同操作系统
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/f153beca1806b80b27f1db8ca4a28efeb5e9e92f2caa6875b46354245569316d.jpg)  
+图1.7两类虚拟机管理程序在系统中的位置  
+
+- 运行机制
+  - 虚拟机作为用户态进程运行
+  - 不允许执行敏感指令
+  - 虚拟内核态的概念
+  - 指令执行控制
+    - 支持虚拟化的CPU处理方式
+    - 不支持虚拟化的CPU处理方式
+
+</ul>
+
+##### 第二类虚拟机管理程序  
+<ul>
+- 特征
+  - 依赖于主操作系统
+  - 类似普通进程
+  - 模拟完整计算机环境
+
+- 系统组成
+  - 客户操作系统
+  - 宿主操作系统
+  - 虚拟设备管理
+
+- 应用场景
+  - Web主机服务
+  - 云主机服务
+    - 相比共享托管和独占托管的优势
+    - 资源利用效率
+
+- 命名说明
+  - 第一类：裸金属架构
+  - 第二类：寄居架构
+
+</ul>
+
+##### 功能分层设计
+<ul>
+- 微内核OS的四个特点
+  - $\textcircled{\scriptsize{1}}$ 内核足够小
+  - $\textcircled{2}$ 基于客户/服务器模式
+  - $\textcircled{3}$ 应用"机制与策略分离"原理
+  - $\textcircled{4}$ 采用面向对象技术
+  
+</ul>
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
