--- a/re_knowledge/concept/运行环境/中断和异常.md
+++ b/re_knowledge/concept/运行环境/中断和异常.md
@@ -1,5 +1,118 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 中断和异常的概念
+
+<ul>
+
+>pro：用户态切换到内核态的事件分析（2013、2015）  
+
+### 状态切换机制
+<ul>
+- 通过中断或异常实现用户态到核心态的切换
+- 硬件实现方式：
+  - 特殊寄存器位控制
+    - 0表示核心态
+    - 1表示用户态
+
+</ul>
+
+### 基本定义
+
+<ul>
+
+>pro：可能引发中断或异常的指令分析（2013、2015）  
+
+#### 中断(外中断)
+- 来自CPU外部事件
+- 主要用于：
+  - I/O结束中断
+  - 时钟中断
+
+#### 异常(内中断)
+- 来自CPU内部事件
+- 触发情况：
+  - 非法操作码
+  - 地址越界
+  - 运算溢出
+  - 缺页
+  - 陷入指令
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/493ee587aa4ea7134d5b43927f04c9c39d6157c05d4d8a3e96ba9bbf2dad9e75.jpg)  
+图1.2内中断和外中断的联系与区别  
+
+</ul>
+
+### 分类系统
+
+<ul>
+
+>pro：中断和异常的分类（2016）  
+
+#### 外中断分类
+- 可屏蔽中断
+  - 通过INTR线发出
+  - 可通过屏蔽字实现多重中断
+- 不可屏蔽中断
+  - 通过NMI线发出
+  - 用于处理紧急硬件故障
+
+#### 异常分类
+- 故障(Fault)
+  - 指令执行引起
+  - 包括：
+    - 非法操作码
+    - 缺页故障
+    - 除数为0
+    - 运算溢出
+- 自陷(Trap)
+  - 预先安排的异常
+  - 用于：
+    - 条件陷阱指令
+    - 系统调用指令
+- 终止(Abort)
+  - 硬件故障导致
+  - 如：
+    - 控制器出错
+    - 存储器校验错
+
+</ul>
+
+### 处理流程
+
+<ul>
+
+>pro：中断和异常的处理过程（2015、2020、2024）  
+
+- 基本流程：
+  - 检测到中断/异常
+  - 打断当前程序
+  - 转入处理程序
+  - 处理完成后返回
+
+>pro：中断处理和子程序调用的比较（2012）  
+
+#### 与子程序调用的区别
+- 关系性质：
+  - 中断处理与被中断程序相互独立
+  - 子程序与主程序是主从关系
+- 触发方式：
+  - 中断随机产生
+  - 子程序通过CALL指令调用
+- 处理过程：
+  - 中断需要硬件支持
+  - 子程序纯软件处理
+- 入口地址确定：
+  - 中断通过硬件向量法
+  - 子程序由CALL指令指定
+- 程序计数器保护：
+  - 中断由隐指令完成
+  - 子程序由CALL指令完成
+- 响应机制：
+  - 中断需要多重请求裁决
+  - 子程序无需裁决
+</ul>
+
+</ul>
 
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
