--- a/re_knowledge/concept/运行环境/处理器运行模式.md
+++ b/re_knowledge/concept/运行环境/处理器运行模式.md
@@ -1,6 +1,164 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 处理器运行模式
 
+<ul>
+
+### CPU执行程序分类
+<ul>
+- 操作系统内核程序
+- 用户自编程序（系统外层应用程序）
+  - 两者作用不同：
+    - 内核程序是管理者
+    - 用户程序是被管理者
+  - 区别：
+    - 内核程序可执行特权指令
+    - 用户程序不能执行特权指令
+
+>pro：特权指令和非特权指令的特点（2022）  
+
+#### 指令类型
+##### 特权指令
+- 不允许用户直接使用
+- 包括：
+  - I/O指令
+  - 关中断指令
+  - 内存清零指令
+  - 存取内存保护寄存器
+  - 送PSW到程序状态字寄存器等
+
+##### 非特权指令
+- 允许用户直接使用
+- 特点：
+  - 不能直接访问系统软硬件资源
+  - 仅限访问用户地址空间
+
+>pro：内核态执行的指令分析（2021）  
+
+</ul>
+
+#### CPU运行模式实现
+<ul>
+>pro：用户态发生或执行的事件分析（2011、2012、2014）  
+- 分为用户态和核心态
+  - 通过CPU内部开关控制：
+    - 0：核心态，可执行特权指令
+    - 1：用户态，只能执行非特权指令
+  - 应用场景：
+    - 应用程序运行在用户态
+    - 操作系统内核程序运行在核心态
+    - 通过访管指令请求服务
+
+</ul>
+
+</ul>
+
+### 现代操作系统结构
+<ul>
+
+#### 分层结构
+<ul>
+- 最低层：
+  - 时钟管理
+  - 中断处理
+  - 设备驱动
+- 次低层：
+  - 进程管理
+  - 存储器管理
+  - 设备管理
+- 以上两层构成操作系统内核，运行在核心态
+
+</ul>
+
+#### 内核功能
+<ul>
+
+##### 时钟管理
+
+<ul>
+
+>pro：时钟中断服务的内容（2018）  
+
+- 主要功能：
+  - 计时，提供标准系统时间
+  - 通过时钟中断实现进程切换
+  - 支持各类调度方式：
+    - 分时系统的时间片轮转
+    - 实时系统的截止时间控制
+    - 批处理系统的运行度量
+
+</ul>
+
+##### 中断机制
+
+<ul>
+
+>pro：中断机制在多道程序设计中的作用（2016）  
+
+- 目的：提高CPU利用率
+- 应用领域：
+  - 输入输出控制
+  - 进程管理调度
+  - 系统功能调用
+  - 设备驱动
+  - 文件访问
+- 内核部分职责：
+  - 保护中断现场信息
+  - 恢复中断现场信息
+  - 转移控制权
+
+</ul>
+
+##### 原语
+
+<ul>
+
+- 特点：
+  - 位于系统底层
+  - 操作具有原子性
+  - 运行时间短且调用频繁
+- 实现方法：
+  - 关中断实现
+  - 应用领域：
+    - 设备驱动
+    - CPU切换
+    - 进程通信
+
+</ul>
+
+##### 系统控制的数据结构及处理
+
+<ul>
+
+- 系统状态数据结构：
+  - 作业控制块
+  - 进程控制块(PCB)
+  - 设备控制块
+  - 各类链表
+  - 消息队列
+  - 缓冲区
+  - 空闲区登记表
+  - 内存分配表
+- 基本操作类型：
+  - 进程管理
+    - 状态管理
+    - 调度分派
+    - 控制块操作
+  - 存储器管理
+    - 空间分配回收
+    - 内存保护
+    - 代码对换
+  - 设备管理
+    - 缓冲区管理
+    - 设备分配回收
+
+</ul>
+
+</ul>
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
