--- a/re_knowledge/concept/运行环境/系统调用.md
+++ b/re_knowledge/concept/运行环境/系统调用.md
@@ -1,6 +1,125 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 系统调用  
 
+<ul>
+
+>pro：系统调用的定义及性质（2019、2021）  
+
+### 定义与性质
+<ul>
+- 系统调用是用户程序调用操作系统提供的子功能
+  - 可视为特殊的公共子程序
+  - 共享资源由操作系统统一管理
+  - 资源相关操作必须通过系统调用请求服务
+- 系统调用特点
+  - 每个调用有唯一系统调用号
+  - 数量可达几十到上百条
+  - 按功能分类
+
+>pro：系统调用的功能（2021）  
+
+</ul>
+
+### 功能分类
+<ul>
+- 设备管理
+  - 设备的请求或释放
+  - 设备启动
+- 文件管理
+  - 文件的读写
+  - 文件的创建及删除
+- 进程控制
+  - 进程的创建、撤销
+  - 进程的阻塞及唤醒
+- 进程通信
+  - 进程间消息传递
+  - 信号传递
+- 内存管理
+  - 内存的分配、回收
+  - 获取作业内存信息
+
+</ul>
+
+### 处理要求
+<ul>
+- 由操作系统内核程序负责
+- 运行在核心态
+- 原因：涉及系统资源和进程管理
+
+>pro：系统调用的处理过程及CPU状态的变化（2012、2017、2023）  
+
+>pro：系统调用处理过程中操作系统负责的任务（2022）  
+
+</ul>
+
+### 处理过程
+<ul>
+
+#### 第一步：准备阶段
+- 用户程序操作
+  - 将系统调用号和参数压入堆栈
+  - 执行调用指令和陷入指令
+- 状态转换
+  - CPU从用户态转为核心态
+- 现场保护
+  - 保存PC、PSW及通用寄存器内容
+
+#### 第二步：处理阶段
+- 分析系统调用类型
+- 查找系统调用入口表
+- 转入对应处理子程序
+
+#### 第三步：恢复阶段
+- 恢复CPU现场
+- 返回继续执行
+
+</ul>
+
+### CPU状态变化理解
+<ul>
+- 陷入指令作用
+  - CPU使用权交给内核程序
+  - 状态从用户态进入核心态
+- 处理完成后
+  - CPU使用权返回用户程序
+  - 状态从核心态回用户态
+- 设计目的
+  - 限制用户程序直接执行关键操作
+  - 保证系统稳定性和安全性
+
+</ul>
+
+### 运行环境说明
+<ul>
+- 基本流程
+  - 用户通过操作系统运行上层程序
+  - 上层程序依赖底层管理程序服务
+  - 需要服务时通过中断进入核心态
+  - 异常情况通过异常处理进入核心态
+  - 处理完成后返回断点继续执行
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/b1906f3c0ca66238f8d17735d697a2137fc1f07f9548f85837ea5f14001eeb54.jpg)  
+图1.3系统调用执行过程  
+
+</ul>
+
+### 状态转换示例
+<ul>
+
+#### 用户态转向核心态
+- 系统调用请求服务
+- 中断发生
+- 程序产生错误状态
+- 企图执行特权指令
+
+#### 核心态转向用户态
+- 通过中断返回指令实现
+- 该指令为特权命令
+ 
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
