--- a/re_knowledge/内存/concept/页 段/基本分段.md
+++ b/re_knowledge/内存/concept/页 段/基本分段.md
@@ -1,6 +1,230 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 基本分段存储管理
 
+<ul>
+
+### 概述
+
+<ul>
+
+- 分页管理方式
+  - 从计算机角度设计
+  - 目的是提高内存利用率和性能
+  - 通过硬件机制实现
+  - 对用户完全透明
+
+- 分段管理方式
+  - 考虑用户和程序员需求
+  - 满足多方面需要：
+    - 方便编程
+    - 信息保护和共享
+    - 动态增长
+    - 动态链接
+
+</ul>
+
+### 分段
+
+<ul>
+
+#### 基本概念
+
+<ul>
+
+- 将用户进程的逻辑地址空间划分为大小不等的段
+- 进程划分示例：
+  - 主程序段
+  - 两个子程序段
+  - 栈段
+  - 数据段
+- 特点：
+  - 段内要求连续
+  - 段间不要求连续
+  - 进程的地址空间是二维的
+
+>pro：分段系统的逻辑地址结构分析（2009）  
+
+</ul>
+
+#### 逻辑地址结构
+
+<ul>
+
+- 由两部分组成：
+  - 段号(S)
+  - 段内偏移量(W)
+- 具体参数：
+  - 段号：16位
+  - 段内偏移量：16位
+  - 最大段数：2^16 = 65536
+  - 最大段长：64KB
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/90346c8dc49007d299dcec9f7edeb1cdbbfcc155f76ca5933c5eed85f0350dff.jpg)  
+图3.13分段系统中的逻辑地址结构  
+
+</ul>
+
+#### 用户可见性
+
+<ul>
+
+- 页式系统：
+  - 页号和页内偏移量对用户透明
+- 分段系统：
+  - 段号和段内偏移量需用户显式提供
+  - 在高级语言中由编译程序完成
+
+</ul>
+
+</ul>
+
+### 段表
+
+<ul>
+
+#### 基本特征
+
+<ul>
+
+- 每个进程都有一张段表
+- 用途：
+  - 实现逻辑空间与内存空间映射
+- 结构：
+  - 每个段对应一个段表项
+  - 段表项记录：
+    - 段在内存中的始址
+    - 段的长度
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/587fc0765e3589715cc978f4f3f4d13ce767907a018d146270266a66587833b6.jpg)  
+图3.14段表的内容  
+
+</ul>
+
+#### 映射实现
+
+<ul>
+
+- 执行过程：
+  - 通过查找段表
+  - 找到每段对应的内存区
+- 作用：
+  - 实现从逻辑段到物理内存区的映射
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/8c140d6facaf5de36702ce9fc4d8c567bcd938c6ee4352f5ce6a2176cece06db.jpg)  
+图3.15利用段表实现物理内存区映射
+
+</ul>
+
+</ul>
+
+### 地址变换机构  
+
+<ul>
+
+#### 变换过程
+
+<ul>
+
+- 系统设置：
+  - 段表寄存器：存放段表始址F和段表长度M
+- 从逻辑地址A到物理地址E的变换过程如下：
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/4ce6c20cc541f28a9c88f7a86c22f90a5c02d2beeb61fb177c23a9c0e40280e0.jpg)  
+图3.16分段系统的地址变换过程  
+
+>pro：段式系统的地址变换过程（2016）  
+
+- 具体步骤：
+  - ① S W
+  - ② 段号越界检查：
+    - 若段号S>段表长度M：产生越界中断
+    - 否则：继续执行
+  - ③ 段表查询：
+    - 计算段表项地址：段表始址F + 段号S × 段表项长度
+    - 段长检查：
+      - 若W≥C：产生越界中断
+      - 否则：继续执行
+  - ④ 物理地址计算：
+    - 取出段始址b
+    - 计算物理地址E=b+W
+    - 访问内存
+
+</ul>
+
+</ul>
+
+### 分页和分段的对比  
+
+<ul>
+
+#### 相似之处
+
+<ul>
+
+- 都是非连续分配方式
+- 都需要地址映射机构实现地址变换
+
+</ul>
+
+#### 主要区别
+
+<ul>
+
+- 基本单位性质：
+  - 页：信息的物理单位
+  - 段：信息的逻辑单位
+- 大小特征：
+  - 页：固定大小，由系统决定
+  - 段：长度不固定，由用户程序决定
+- 地址空间维度：
+  - 分页：一维地址空间
+  - 分段：二维地址空间
+
+</ul>
+
+</ul>
+
+### 段的共享与保护  
+
+<ul>
+
+#### 共享实现
+
+<ul>
+
+>pro：页、段共享的原理和特点（2019、2023）  
+
+- 分页系统：
+  - 共享N个页框需要在每个进程页表中建立N个页表项
+- 分段系统：
+  - 只需一个段表项指向共享的物理段
+  - 可重入代码（纯代码）：
+    - 特点：允许多进程同时访问
+    - 保护措施：
+      - 每个进程配备局部数据区
+      - 可修改的内容复制到数据区
+
+</ul>
+
+#### 保护方法
+
+<ul>
+
+- 两种主要方式：
+  - 存取控制保护
+  - 地址越界保护：
+    - 段号越界检查：段号与段表长度比较
+    - 段内偏移越界检查：段内偏移与段长比较
+- 与分页管理对比：
+  - 分页只需检查页号越界
+  - 页内偏移不可能越界
+
+</ul>
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
