--- a/re_knowledge/内存/虚拟/抖动和工作集.md
+++ b/re_knowledge/内存/虚拟/抖动和工作集.md
@@ -1,6 +1,90 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## *抖动和工作集  
 
+<ul>
+
+### 抖动  
+
+<ul>
+
+#### 概念
+
+<ul>
+
+- 在页面置换过程中出现的最糟糕情形：
+  - 刚换出的页面马上要换入内存
+  - 刚换入的页面马上要换出内存
+  - 这种频繁的页面调度行为称为抖动或颠簸
+
+>pro：抖动的处理措施（2011）  
+
+</ul>
+
+#### 原因与影响
+
+<ul>
+
+- 根本原因：
+  - 分配给每个进程的物理块太少
+  - 不能满足进程正常运行的基本要求
+- 导致结果：
+  - 进程运行时频繁出现缺页
+  - 必须请求系统将所缺页面调入内存
+  - 对磁盘的访问时间急剧增加
+  - 进程大部分时间用于页面换入/换出
+  - CPU利用率急剧下降并趋于零
+
+</ul>
+
+#### 解决思路
+
+<ul>
+
+- 抖动是严重问题，必须采取相应措施解决
+- 由于抖动与系统为进程分配物理块的多少（驻留集）有关
+- 提出了关于进程工作集的概念
+
+</ul>
+
+</ul>
+
+### 工作集  
+
+<ul>
+
+#### 定义与特点
+
+<ul>
+
+- 工作集是指在某段时间间隔内，进程要访问的页面集合
+- 工作集W可由时间t和工作集窗口尺寸Δ来确定
+- 例如，某个进程对页面的访问次序如下：
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/7e7650cbeee2c2313379c84decb64491b8962aec3f0e1b2705e0b3f4f6bdc05d.jpg)  
+
+>pro：工作集的应用分析（2016）  
+
+</ul>
+
+#### 应用实例
+
+<ul>
+
+- 假设工作集窗口尺寸Δ设置为5：
+  - t₁时刻，进程的工作集为{2,3,5}
+  - t₂时刻，进程的工作集为{1,2,3,4}
+- 实际应用特点：
+  - 工作集窗口会设置得很大
+  - 对局部性好的程序，工作集大小一般比工作集窗口Δ小很多
+  - 工作集反映了进程可能频繁访问的页面集合
+  - 驻留集大小不能小于工作集，否则会频繁缺页
+
+</ul>
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
