--- a/re_knowledge/内存/虚拟/映射 性能/内存映射文件.md
+++ b/re_knowledge/内存/虚拟/映射 性能/内存映射文件.md
@@ -1,6 +1,63 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 内存映射文件  
 
+<ul>
+
+### 基本概念
+
+<ul>
+
+- 是操作系统向应用程序提供的系统调用
+- 与虚拟内存相似
+- 在磁盘文件与进程的虚拟地址空间之间建立映射关系
+
+</ul>
+
+### 工作原理
+
+<ul>
+
+- 映射过程：
+  - 进程将文件映射到虚拟地址空间的某区域
+  - 用访问内存的方式读写文件
+  - 将文件当作内存中的大字符数组访问
+- 操作特点：
+  - 不通过文件I/O操作来访问
+  - 磁盘文件的读出/写入由操作系统负责
+  - 对进程是透明的
+  - 页面映射时不实际读入文件内容
+  - 仅在访问页面时才每次一页地读入
+  - 进程退出或关闭文件映射时，被改动的页面才写回磁盘
+
+</ul>
+
+### 共享内存实现
+
+<ul>
+
+- 实现方式：
+  - 通过映射相同文件到通信进程的虚拟地址空间
+  - 各进程虚拟地址空间相互独立
+  - 操作系统将对应虚拟地址空间映射到相同物理内存
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/76a940c9c401911d0a3d8bdf085755a3db103cf97b89ec83e4dc8259b9c4ac6e.jpg)  
+图3.28采用内存映射1/0的共享内存  
+
+</ul>
+
+### 主要优点
+
+<ul>
+
+- 编程更简单：
+  - 已建立映射的文件只需按访问内存方式读写
+- 便于共享：
+  - 方便多个进程共享同一个磁盘文件
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
