--- a/re_knowledge/内存/虚拟/映射 性能/性能影响因素.md
+++ b/re_knowledge/内存/虚拟/映射 性能/性能影响因素.md
@@ -1,6 +1,89 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 虚拟存储器性能影响因素  
 
+<ul>
+
+>pro：请求分页系统性能的影响因素分析（2020、2022）  
+
+### 缺页率影响因素
+
+<ul>
+
+#### 页面大小
+
+<ul>
+
+- 页面较大：
+  - 缺页率较低
+  - 减少页表长度
+  - 页内碎片增大
+- 页面较小：
+  - 缺页率较高
+  - 减少内存碎片
+  - 提高内存利用率
+  - 进程要求页面多
+  - 页表过长占用大量内存
+
+</ul>
+
+#### 物理块数量
+
+<ul>
+
+- 分配规律：
+  - 物理块数越多，缺页率越低
+  - 超过某数目后改善不明显
+- 分配原则：
+  - 保证活跃页面在内存中
+  - 保持缺页率在很低范围
+  - 避免过度分配浪费内存
+
+</ul>
+
+#### 页面置换算法
+
+<ul>
+
+- 好的置换算法可降低缺页率
+- 建议选择：
+  - LRU算法
+  - CLOCK算法
+- 目标：
+  - 保留可能访问的页面
+  - 提高页面访问速度
+
+</ul>
+
+#### 写回磁盘策略
+
+<ul>
+
+- 问题：
+  - 频繁写回效率低
+- 解决方案：
+  - 建立已修改换出页面链表
+  - 达到给定值时批量写回
+- 优点：
+  - 减少磁盘I/O次数
+  - 减少页面换出开销
+  - 便于快速重新访问
+
+</ul>
+
+#### 程序编写方式
+
+<ul>
+
+- 局部化程度：
+  - 程度越高，缺页率越低
+- 访问方式：
+  - 应与存储方式一致
+  - 避免不当访问造成高缺页率
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
