--- a/re_knowledge/内存/虚拟/概念.md
+++ b/re_knowledge/内存/虚拟/概念.md
@@ -1,6 +1,135 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+<ul>
 
+在学习本节时，请读者思考以下问题：  
+
+1）为什么要引入虚拟内存？2）虚拟内存空间的大小由什么因素决定？3）虚拟内存是怎么解决问题的？会带来什么问题？  
+
+读者要掌握虚拟内存解决问题的思想，了解各种替换算法的优劣，掌握虚实地址的变换方法。  
+
+## 虚拟内存的基本概念  
+
+<ul>
+
+### 传统存储管理方式的特征  
+
+<ul>
+
+- 两个共同特征：
+  - 一次性
+    - 作业必须一次性全部装入内存后才能运行
+    - 导致的问题：
+      - 作业太大无法全部装入时无法运行
+      - 内存不足导致并发度下降
+  - 驻留性
+    - 作业装入后一直驻留直至结束
+    - 即使进程阻塞等待I/O也占用内存
+- 问题：造成内存资源浪费
+
+</ul>
+
+### 局部性原理
+
+<ul>
+
+- 是高速缓存技术的基础
+- 适用于程序结构和数据结构
+- 两个方面：
+
+#### 时间局部性
+
+<ul>
+
+>pro：页面置换算法的时间局部性分析（2012）  
+
+- 指令或数据被访问后不久可能再次被访问
+- 原因是程序中存在大量循环操作
+
+</ul>
+
+#### 空间局部性
+
+<ul>
+
+- 访问某存储单元后不久可能访问其附近单元
+- 原因：
+  - 指令顺序存放执行
+  - 数据以向量、数组等形式簇聚存储
+
+</ul>
+
+- 实现方式：
+  - 时间局部性：通过高速缓存层次结构
+  - 空间局部性：使用大容量高速缓存和预取机制
+  - 虚拟内存：建立内存-外存两级结构
+
+</ul>
+
+### 虚拟存储器的定义和特征
+
+<ul>
+
+>pro：虚拟存储器的特点（2012）  
+
+- 基本原理：
+  - 程序装入时只装入必需页面/段
+  - 运行时动态调页/段
+  - 内存空间不足时进行页面/段置换
+
+- 三个主要特征：
+
+#### 多次性
+
+<ul>
+
+- 无需一次性全部装入
+- 可分多次调入所需部分
+
+</ul>
+
+#### 对换性
+
+<ul>
+
+- 允许程序运行时进行换入换出
+- 暂不使用的部分可换出到外存
+
+</ul>
+
+#### 虚拟性
+
+<ul>
+
+- 逻辑上扩充内存容量
+- 用户看到的容量远大于实际容量
+
+</ul>
+
+</ul>
+
+### 虚拟内存技术的实现
+
+<ul>
+
+- 实现基础：
+  - 需要建立在离散分配方式上
+  - 连续分配会造成内存浪费
+
+- 三种实现方式：
+  - 请求分页存储管理
+  - 请求分段存储管理
+  - 请求段页式存储管理
+
+- 所需硬件支持：
+  - 一定容量的内存和外存
+  - 页表/段表机制
+  - 中断机构
+  - 地址变换机构
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
