--- a/re_knowledge/内存/虚拟/页/请求分页.md
+++ b/re_knowledge/内存/虚拟/页/请求分页.md
@@ -1,6 +1,120 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 请求分页管理方式  
 
+<ul>
+
+请求分页系统建立在基本分页系统的基础之上，为支持虚拟存储器功能而增加了请求调页和页面置换功能。在请求分页系统中，只要求将当前需要的一部分页面装入内存，便可启动作业运行。在作业执行过程中，当所访问的页面不在内存时，再通过请求调页功能将其从外存调入内存；当内存空间不够时，通过页面置换功能将内存中暂时用不到的页面换出到外存。  
+
+- 系统必须提供的硬件支持：
+  - 需要一定容量的内存及外存
+  - 页表机制
+  - 缺页中断机构
+  - 地址变换机构
+
+### 页表机制  
+
+<ul>
+
+#### 与基本分页系统的区别
+
+<ul>
+
+- 请求调页功能需求：
+  - 需知道页面是否已调入内存
+  - 未调入时需知道外存存放地址
+
+</ul>
+
+#### 页面置换功能需求
+
+<ul>
+
+- 需通过指标决定换出页面
+- 需知道页面是否被修改以决定是否写回外存
+
+</ul>
+
+#### 页表项新增字段
+
+<ul>
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/303eb7338433296b1594b6b41a3d67baab1a6ec3202f81030c6eba53ac77444c.jpg)  
+
+- 状态位P：标记页面是否已调入内存
+- 访问字段A：记录页面访问次数或未访问时间
+- 修改位M：标记页面是否被修改
+- 外存地址：记录页面在外存的存放位置
+
+</ul>
+
+</ul>
+
+### 缺页中断机构  
+
+<ul>
+
+>pro：缺页处理的过程及效率分析（2011、2013、2014、2020、2022）  
+
+>pro：缺页异常导致进程状态的变化（2023）  
+
+#### 缺页中断处理流程
+
+<ul>
+
+- 进程状态变化：
+  - 缺页进程进入阻塞队列
+  - 调页完成后进入就绪队列
+- 页面调入处理：
+  - 有空闲页框时直接分配
+  - 无空闲页框时需进行页面置换
+    - 被修改页面需写回外存
+    - 未修改页面直接覆盖
+
+</ul>
+
+#### 与一般中断的区别
+
+<ul>
+
+- 发生时间：指令执行期间（内部异常）
+- 特点：一条指令可能多次缺页中断
+
+</ul>
+
+</ul>
+
+### 地址变换机构  
+
+<ul>
+
+>pro：分页系统的地址变换过程及性能分析（2009、2010、2014）  
+
+#### 地址变换过程
+
+<ul>
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/87bc4b66fa081f12eff16181f93a138db04c62d81e949c6053dcb2d60a16476c.jpg)  
+
+- 快表检索：
+  - 命中：获取物理块号并更新访问位
+  - 写指令时设置修改位
+- 页表查找：
+  - 找到：获取物理块号并更新快表
+  - 快表已满需进行替换
+- 缺页处理：
+  - 将页面从外存调入内存
+  - 更新页表和快表
+  - 获取物理块号
+- 物理地址形成：
+  - 物理块号和页内地址拼接
+  - 访问内存
+
+</ul>
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
