--- a/re_knowledge/内存/虚拟/页/页框分配.md
+++ b/re_knowledge/内存/虚拟/页/页框分配.md
@@ -1,6 +1,183 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 页框分配  
 
+<ul>
+
+### 驻留集大小  
+
+<ul>
+
+- 驻留集定义：给一个进程分配的页框的集合
+- 驻留集大小考虑因素：
+  - 驻留集越小：
+    - 优点：提高多道程序并发度
+    - 缺点：缺页率高，CPU耗费大量时间处理缺页
+  - 驻留集越大：
+    - 缺点：
+      - 超过某个数目时改善不明显
+      - 浪费内存空间
+      - 降低多道程序并发度
+
+</ul>
+
+### 内存分配策略  
+
+<ul>
+
+>pro：页面分配与置换策略的名称（2015）  
+
+#### 固定分配局部置换
+
+<ul>
+
+- 特点：
+  - 每个进程分配固定数目物理块
+  - 运行期间不改变
+  - 缺页时只能从本进程页面中置换
+- 缺点：难以确定合适的物理块数目
+
+</ul>
+
+#### 可变分配全局置换
+
+<ul>
+
+- 特点：
+  - 初始分配一定数目物理块
+  - 运行期间可增减
+  - 缺页时从空闲队列分配
+- 优缺点：
+  - 优点：更加灵活
+  - 缺点：可能降低并发能力
+
+</ul>
+
+#### 可变分配局部置换
+
+<ul>
+
+- 特点：
+  - 初始分配一定数目物理块
+  - 只能从本进程页面中置换
+  - 根据缺页率动态调整分配
+- 优点：
+  - 保证进程不会过多调页
+  - 保持系统并发能力
+- 缺点：
+  - 实现复杂
+  - 开销较大
+
+</ul>
+
+</ul>
+
+### 物理块调入算法  
+
+<ul>
+
+#### 固定分配策略下的分配算法
+
+<ul>
+
+- 平均分配算法：平均分配给各进程
+- 按比例分配算法：根据进程大小分配
+- 优先权分配算法：
+  - 部分按比例分配
+  - 部分按优先权分配
+
+</ul>
+
+</ul>
+
+### 调入页面的时机  
+
+<ul>
+
+#### 预调页策略
+
+<ul>
+
+- 特点：一次调入多个相邻页面
+- 优点：可能提高效率
+- 缺点：预测成功率低(约50%)
+- 应用：主要用于进程首次调入
+
+</ul>
+
+#### 请求调页策略
+
+<ul>
+
+- 特点：运行中需要时才调入
+- 优点：
+  - 调入页面必被访问
+  - 易于实现
+- 缺点：每次只调入一页，I/O开销大
+- 应用：目前虚拟存储器主要采用此策略
+
+</ul>
+
+</ul>
+
+### 从何处调入页面  
+
+<ul>
+
+#### 外存分区
+
+<ul>
+
+- 文件区：存放文件，离散分配
+- 对换区：存放对换页面，连续分配，I/O更快
+
+</ul>
+
+#### 调入方式
+
+<ul>
+
+- 有足够对换区空间：
+  - 全部从对换区调入
+  - 运行前需将文件复制到对换区
+- 缺少对换区空间：
+  - 不修改文件直接从文件区调入
+  - 可能修改的页面从对换区调入
+- UNIX方式：
+  - 未运行页面从文件区调入
+  - 换出页面从对换区调入
+  - 共享页面可直接使用
+
+</ul>
+
+</ul>
+
+### 如何调入页面  
+
+<ul>
+
+#### 缺页中断处理流程
+
+<ul>
+
+- 发现页面不在内存时：
+  - 向CPU发出缺页中断
+  - 转入中断处理程序
+- 内存未满时：
+  - 启动磁盘I/O调入所缺页
+  - 修改页表
+- 内存已满时：
+  - 选择换出页面
+  - 若页面已修改则写回磁盘
+  - 调入所缺页面
+  - 修改页表
+- 完成后利用新页表访问数据
+
+</ul>
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
