--- a/re_knowledge/内存/虚拟/页/页面置换算法.md
+++ b/re_knowledge/内存/虚拟/页/页面置换算法.md
@@ -1,6 +1,235 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 页面置换算法
 
+<ul>
+
+- 当进程访问的页面不在内存且内存无空闲空间时需要页面置换
+- 页面置换算法用于选择调出哪个页面
+- 目标是追求更低的缺页率，因为换入换出需要磁盘I/O开销大
+
+>pro：各种页面置换算法的特点：哪种可能导致Belady异常（2014）
+
+### 常见页面置换算法
+
+<ul>
+
+#### 最佳（OPT）置换算法
+
+<ul>
+
+- 基本原理
+  - 选择淘汰以后永不使用或最长时间不再访问的页面
+  - 可获得最低缺页率
+  - 无法实现(无法预测未来访问)
+  - 可用于评价其他算法
+
+- 示例分析
+  - 系统分配3个物理块
+  - 页面引用串：$7,0,1,2,0,3,0,4,2,3,0,3,2,1,2,0,1,7,0,1$
+  - 置换过程
+    - 先装入7,0,1三页
+    - 访问2时换出7
+    - 访问0时已在内存无需置换
+    - 访问3时换出1
+    
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/61583c18c7ae930edd7d16c4dcff3c3ae7858119f6557eccd99e4b5398175ec7.jpg)
+
+- 结果统计
+  - 缺页中断9次
+  - 页面置换6次
+
+</ul>
+
+#### 先进先出（FIFO）页面置换算法
+
+<ul>
+
+- 基本原理
+  - 选择最早进入内存的页面淘汰
+  - 实现简单：页面按调入顺序排队
+  - 性能较差：未利用局部性原理
+
+>pro：FIFO算法的应用分析（2010）
+
+- 示例分析
+  - 访问2时换出最早进入的7
+  - 访问3时换出最早的0
+  - 总计12次页面置换
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/d9303910609604ffdc49a8d93279f88c91f4f105bd07496c65cd98a4e9bf8937.jpg)
+
+- Belady异常现象
+  - 定义：物理块增多但缺页次数增加
+  - 示例：页面序列$3,2,1,0,3,2,4,3,2,1,0,4$
+    - 3个物理块：9次缺页
+    - 4个物理块：10次缺页
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/0fac7f8bd4c56893befd56f5a065cabcad42b9c28541021c3188fe483f19cead.jpg)
+
+- 特点：只有FIFO可能出现Belady异常
+
+</ul>
+
+#### 最近最久未使用（LRU）置换算法
+
+<ul>
+
+- 基本原理
+  - 选择最近最长时间未使用的页面
+  - 基于过去访问预测将来
+  - 为每页设置访问字段记录未访问时间
+  - 需要硬件支持(寄存器和栈)
+
+>pro：LRU算法的应用分析（2009、2015、2019）
+
+- 示例分析
+  - 访问2时换出最久未用的7
+  - 访问3时换出最久未用的1
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/fb8c1a1a9ff760899ed4e2b7148eb6930e602e244b42f39ea5b1eceb8187008f.jpg)
+
+- 算法特点
+  - 性能较好
+  - 属于堆栈类算法
+  - 不会出现Belady异常
+  - "向前看"而非"向后看"
+
+</ul>
+
+</ul>
+
+### 时钟（CLOCK）置换算法
+
+<ul>
+
+#### 基本概念
+
+<ul>
+
+- LRU算法性能接近OPT，但开销大
+- 操作系统设计者尝试用小开销接近LRU性能
+- 这类算法都是CLOCK算法的变体
+
+</ul>
+
+#### 简单CLOCK置换算法
+
+<ul>
+
+>pro：类CLOCK置换算法的过程分析（2012）
+
+##### 工作原理
+
+<ul>
+
+- 为每页设置访问位
+  - 首次装入或访问时置为1
+- 内存页面形成循环队列
+  - 有替换指针相关联
+  - 指针指向被替换页的下一页
+
+</ul>
+
+##### 置换过程
+
+<ul>
+
+- 检查页面访问位
+  - 若为0：选择换出
+  - 若为1：
+    - 置为0
+    - 给予第二次机会
+    - 检查下一页
+- 循环检查直到找到可换出页面
+
+</ul>
+
+>pro：CLOCK算法的应用分析（2010）
+
+##### 示例分析
+
+<ul>
+
+- 访问序列：$7,0,1,2,0,3,0,4,2,3,0,3,2,1,3,2$
+- 分配4个页帧
+- 页面结构：(页面号，访问位)
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/8b7911315f5bee6fa27e9b245e753c04e54c4f77d1a4cacc75a6be29a9037264.jpg)
+
+- 具体过程：
+  - 首次访问7,0,1,2：依次调入，访问位置1
+  - 访问3时第5次缺页：
+    - 扫描一周将访问位置0
+    - 返回帧1替换
+  - 访问4时第6次缺页：
+    - 从帧2开始扫描
+    - 找到帧3访问位为0并替换
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/2fb977bf56e778aeeb1826bdeb16c5a0556489c1fc630c31a806466dd18668cf.jpg)
+
+</ul>
+
+</ul>
+
+#### 改进型CLOCK置换算法
+
+<ul>
+
+>pro：改进CLOCK算法的思想（2018）
+
+>pro：改进CLOCK算法的应用分析（2016、2021）
+
+##### 改进原理
+
+<ul>
+
+- 增加修改位考虑
+  - 修改过的页面需写回磁盘
+  - 未修改页面不需写回
+- 页面分为四类(A为访问位，M为修改位)：
+  - 1类(A=0,M=0)：最佳淘汰页
+  - 2类(A=0,M=1)：次佳淘汰页
+  - 3类(A=1,M=0)：可能再访问
+  - 4类(A=1,M=1)：可能再访问
+
+</ul>
+
+##### 执行过程
+
+<ul>
+
+1. 第一轮扫描
+   - 寻找1类页面(A=0,M=0)
+   - 不改变访问位
+2. 第二轮扫描
+   - 寻找2类页面(A=0,M=1)
+   - 将扫描过页面访问位置0
+3. 若仍失败
+   - 返回起点
+   - 所有访问位置0
+   - 重复前两步
+
+</ul>
+
+##### 算法特点
+
+<ul>
+
+- 优点：减少磁盘I/O操作
+- 缺点：可能需多轮扫描
+- 基本原则：
+  - 保留访问过的页面
+  - 淘汰未访问页面
+  - 优先考虑未修改页面
+
+</ul>
+
+</ul>
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
