--- a/re_knowledge/文件/basic/operation/保护.md
+++ b/re_knowledge/文件/basic/operation/保护.md
@@ -1,5 +1,119 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 文件保护  
+
+<ul>
+
+为了防止文件共享可能会导致文件被破坏或未经核准的用户修改文件，文件系统必须控制用户对文件的存取，即解决对文件的读、写、执行的许可问题。为此，必须在文件系统中建立相应的文件保护机制，可以通过口令保护、加密保护和访问控制等方式实现。其中，口令和加密是为了防止用户文件被他人存取或窃取，而访问控制则用于控制用户对文件的访问方式。  
+
+### 访问类型  
+
+<ul>
+
+- 主要访问类型：
+  - 读：从文件中读
+  - 写：向文件中写
+  - 执行：将文件装入内存并执行
+  - 添加：将新信息添加到文件结尾部分
+  - 删除：删除文件，释放空间
+  - 列表清单：列出文件名和文件属性
+
+- 其他控制：
+  - 文件重命名、复制、编辑等高层功能
+  - 通过系统程序调用低层系统调用实现
+  - 保护可以只在低层提供
+    - 例如：具有读访问权限即可复制和打印
+
+</ul>
+
+### 访问控制  
+
+<ul>
+
+#### 基于身份的访问控制
+
+<ul>
+
+- 访问控制列表(ACL)方法：
+  - 优点：可使用复杂的访问方法
+  - 缺点：长度无法预计，可能导致复杂的空间管理
+  - 解决方案：使用精简的访问列表
+
+> pro：文件访问控制表的结构（2017）  
+
+</ul>
+
+#### 精简访问控制列表
+
+<ul>
+
+- 三种用户类型：
+  - 拥有者：创建文件的用户
+  - 组：共享文件且具有类似访问的用户群
+  - 其他：系统内所有其他用户
+
+- 实现机制：
+  - 每项占用一个二进制位
+  - 使用3×4位矩阵描述访问权限
+  - 文件创建时记录所有者和组信息在FCB中
+  - 访问权限判定机制：
+    - 文件主按所有者权限访问
+    - 同组用户按组权限访问
+    - 其他用户按其他权限访问
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/78822bd83083d7593e5f6b94b77320fd372e6563c1b1c256745528bdf97e8d4d.jpg)  
+
+</ul>
+
+#### 其他访问控制方法
+
+<ul>
+
+##### 口令控制
+
+<ul>
+
+- 特点：
+  - 建立文件时提供口令
+  - 系统在FCB中附加口令
+  - 访问时需提供相应口令
+- 优缺点：
+  - 优点：时间和空间开销小
+  - 缺点：口令存储在系统内部，安全性不足
+
+</ul>
+
+##### 密码控制
+
+<ul>
+
+- 特点：
+  - 文件加密保护
+  - 访问需要密钥
+- 优缺点：
+  - 优点：保密性强，节省存储空间
+  - 缺点：编码和译码耗时
+
+</ul>
+
+##### 目录保护
+
+<ul>
+
+- 保护范围：
+  - 单个文件保护
+  - 子目录内文件保护
+- 特点：
+  - 目录操作与文件操作不同
+  - 需要不同的保护机制
+
+</ul>
+
+</ul>
+
+</ul>
+
+</ul>
 
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
