--- a/re_knowledge/文件/basic/operation/操作.md
+++ b/re_knowledge/文件/basic/operation/操作.md
@@ -1,5 +1,186 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 文件的操作  
+
+<ul>
+
+### 文件的基本操作
+
+<ul>
+
+#### 基本操作类型
+
+<ul>
+
+- 文件属于抽象数据类型
+- 需要考虑可以对文件执行的操作
+- 操作系统提供系统调用实现以下操作：
+  - 创建
+  - 删除  
+  - 读
+  - 写
+  - 打开
+  - 关闭
+
+</ul>
+
+##### 创建文件
+
+<ul>
+
+- 两个必要步骤：
+  - 为新文件分配外存空间
+  - 在目录中创建目录项
+    - 记录新文件名
+    - 记录文件在外存中的地址等信息
+
+> pro：文件删除的过程（2013、2021)  
+
+</ul>
+
+##### 删除文件
+
+<ul>
+
+- 删除步骤：
+  - 根据文件名查找目录
+  - 删除指定文件对应的目录项和文件控制块
+  - 回收该文件所占用的存储空间
+    - 包括磁盘空间
+    - 包括内存缓冲区
+
+</ul>
+
+##### 读文件
+
+<ul>
+
+- 读取步骤：
+  - 根据文件名查找目录
+  - 找到指定文件的目录项
+  - 从中得到文件在外存中的地址
+  - 使用目录项中的读指针进行读操作
+
+</ul>
+
+##### 写文件  
+
+<ul>
+
+- 写入步骤：
+  - 根据文件名查找目录
+  - 找到指定文件的目录项
+  - 利用目录项中的写指针进行写操作
+  - 每次写操作后更新写指针
+
+</ul>
+
+</ul>
+
+### 文件的打开与关闭
+
+<ul>
+
+> pro：文件打开的过程（2014）  
+
+#### 打开文件机制
+
+<ul>
+
+- 目的：避免多次重复检索目录
+- 实现方式：
+  - 用户首次操作需要使用open系统调用
+  - 系统维护打开文件表
+  - "打开"过程：
+    - 检索指定文件的目录项
+    - 将目录项从外存复制到打开文件表
+    - 返回文件描述符给用户
+  - 后续操作通过文件描述符查找信息
+
+> pro：多进程同时打开文件的分析（2017、2020）  
+
+> pro：文件关闭的过程（2023）  
+
+</ul>
+
+#### 多进程文件访问结构
+
+<ul>
+
+- 采用两级表结构：
+  - 整个系统表
+    - 包含与进程无关的信息
+    - 文件在磁盘上的位置
+    - 访问日期
+    - 文件大小
+  - 每个进程表
+    - 保存进程对文件的使用信息
+    - 当前读写指针
+    - 文件访问权限
+    - 指向系统表条目的指针
+
+- 文件打开机制：
+  - 首次打开：系统表创建条目
+  - 其他进程打开：进程表增加条目并指向系统表
+  - 使用打开计数器(OpenCount)记录打开进程数
+  - 关闭过程：
+    - 删除进程表条目
+    - 系统表计数器递减
+    - 计数为0时删除系统表条目
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/893b6e7893b73c67d7fe74d1969ba469fd1ddf4c1cb25d0b5103ed645b6a95ab.jpg)  
+图4.3内存中文件的系统结构  
+
+> pro：文件名和文件描述符的应用场景（2012、2017、2024）  
+
+</ul>
+
+#### 文件访问标识
+
+<ul>
+
+- 文件名特点：
+  - 不是打开文件表必需部分
+  - FCB定位后不再使用
+- 文件描述符：
+  - UNIX称为文件描述符
+  - Windows称为文件句柄
+  - 文件未关闭时通过描述符进行操作
+
+> attention:  
+
+</ul>
+
+#### 文件关联信息
+
+<ul>
+
+- 文件指针
+  - 跟踪上次读写位置
+  - 作为当前文件位置指针
+  - 对每个进程唯一
+  - 与磁盘文件属性分开保存
+- 文件打开计数
+  - 跟踪文件打开和关闭数量
+  - 多进程可能打开同一文件
+  - 最后一个进程关闭后删除条目
+- 文件磁盘位置
+  - 保存在内存中避免重复读取
+  - 用于文件数据修改操作
+- 访问权限
+  - 每个进程打开文件需要访问模式
+    - 创建
+    - 只读
+    - 读写
+    - 添加等
+  - 保存在进程打开文件表
+  - 用于控制I/O请求
+
+</ul>
+
+</ul>
+
+</ul>
 
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
