--- a/re_knowledge/文件/basic/structure/物理结构.md
+++ b/re_knowledge/文件/basic/structure/物理结构.md
@@ -1,6 +1,246 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 文件的物理结构
 
+<ul>
+
+- 文件的物理结构研究文件的实现方式
+  - 研究文件数据在物理存储设备上的分布和组织
+  - 包含两个方面：
+    - 文件的分配方式（对磁盘非空闲块的管理）
+    - 文件存储空间管理（对磁盘空闲块的管理，详见4.3节）
+
+> pro：不同物理结构的特点和比较（2009、2011、2013、2020）
+
+- 文件分配方法（对应文件的物理结构）：
+  - 连续分配
+  - 链接分配 
+  - 索引分配
+  - 注意与文件的逻辑结构区分
+- 磁盘存储单元：
+  - 分为磁盘块
+  - 大小通常与内存页面相同
+  - 内存与磁盘数据交换以块为单位
+
+### 连续分配
+
+<ul>
+
+> pro：连续分配的应用和分析（2011、2012、2014）
+
+- 特点：
+  - 要求文件在磁盘上占有连续的块
+  - 磁盘地址呈线性排序
+  - 减少寻道数和寻道时间
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/b6a39a462bc9f979d41141910def90539790a0b16d15bdd45bfcfd33eabc0ba3.jpg)  
+图4.6连续分配
+
+- 实现方式：
+  - 记录存储在相邻物理块中
+  - 目录项记录：
+    - 第一个磁盘块号
+    - 占用块数
+  - 访问第i块：直接访问块b+i-1
+- 优点：
+  - 支持顺序访问和直接访问
+  - 顺序访问速度快
+  - 磁头移动距离最小
+- 缺点：
+  - 产生外部碎片
+  - 需预知文件长度
+  - 不支持动态增长
+  - 记录操作需物理移动
+
+</ul>
+
+### 链接分配
+
+<ul>
+
+- 采用离散分配方式
+- 优点：
+  - 消除外部碎片
+  - 支持动态分配
+  - 便于文件操作
+
+#### 隐式链接
+
+<ul>
+
+> pro：链接分配的应用和分析（2014）
+
+- 组织方式：
+  - 目录项包含首尾块指针
+  - 磁盘块可分散存储
+  - 每块含下一块指针
+  - 指针对用户透明
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/6d9292085dcbca8e228af2a372270ec49d72b5570153260a355bffa0f5e93c11.jpg)  
+图4.7隐式链接分配
+
+- 缺点：
+  - 仅支持顺序访问
+  - 稳定性差
+  - 指针占用存储空间
+
+> pro：文件空间分配与簇的关系（2017、2018）
+
+- 改进方案：
+  - 多个盘块组成簇
+  - 按簇分配
+  - 减少查找时间
+  - 缺点：增加内部碎片
+
+</ul>
+
+#### 显式链接
+
+<ul>
+
+- 特点：
+  - 链接指针集中存储
+  - 使用文件分配表(FAT)
+  - 目录仅记录起始块号
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/8477c36d6d340ca093d8331ea371effd24039a9f54ae4c8fc37291be6563af46.jpg)  
+图4.8文件分配表
+
+> pro：FAT的作用（2019）
+
+- FAT特点：
+  - 表项与磁盘块一一对应
+  - 使用特殊数字标记：
+    - -1表示文件最后一块
+    - -2表示空闲块
+  - 可管理空闲空间
+- 优点：
+  - 支持顺序和直接访问
+  - 检索速度快
+  - 减少磁盘访问
+- 缺点：
+  - 占用内存空间
+
+</ul>
+
+</ul>
+
+### 索引分配
+
+<ul>
+
+#### 单级索引分配方式
+
+<ul>
+
+> pro：索引分配的应用和分析（2012）  
+
+- 基本思想：
+  - 打开文件时只需将对应盘块编号调入内存
+  - 将每个文件的盘块号集中放在一起
+  - 为每个文件分配一个索引块(表)
+  - 记录所有分配的盘块号
+
+- 容量计算示例：
+  - 盘块大小：4KB
+  - 盘块号占用：4B
+  - 一个索引块可存放：1024个盘块号
+  - 最大文件支持：$1024\times4\mathrm{KB}=4\mathrm{MB}$
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/e89abaa2fe9a3250aaac1146ba1803296a3c594654e57dcb4cc4432213350843.jpg)  
+图4.9索引分配  
+
+- 优缺点：
+  - 优点：
+    - 支持直接访问
+    - 不产生外部碎片
+  - 缺点：
+    - 索引块增加存储开销
+    - 小文件利用率低
+    - 大文件需要多个索引块
+
+</ul>
+
+#### 多级索引分配方式
+
+<ul>
+
+- 基本原理：
+  - 为索引块建立主索引
+  - 类似多级页表机制
+  - 可扩展到三级、四级索引
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/dd6b002ebe09e54ebdc097237203c876304e6533e28b9d9f7c42459b4904fcfd.jpg)  
+图4.10二级索引分配  
+
+- 容量计算示例：
+  - 盘块大小：4KB
+  - 盘块号占用：4B
+  - 索引块容量：1024个盘块号
+  - 两级索引支持：$1024\times1024\times4\mathrm{KB}=4\mathrm{GB}$
+
+- 优缺点：
+  - 优点：加快大型文件查找速度
+  - 缺点：访问次数随级数增加而增多
+
+</ul>
+
+#### 混合索引分配方式
+
+<ul>
+
+> pro：混合索引1分配的原理（2013）  
+
+- 设计思路：
+  - 针对不同大小文件采用不同策略
+  - UNIX系统实现：13个地址项(i.addr[0-12])
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/423df56c235d223a9617895a37f5ae1ff7d295f35482d63d0bc986ef53bc6876.jpg)  
+图4.11UNIX系统的inode结构示意图  
+
+##### 直接地址
+
+<ul>
+
+- 特点：
+  - 使用i.addr[0-9]共10个直接地址项
+  - 适用于小文件(≤40KB)
+  - 可直接读取盘块号
+
+</ul>
+
+##### 一次间接地址
+
+<ul>
+
+- 特点：
+  - 使用i.addr[10]
+  - 适用于中、大型文件
+  - 最大支持4MB+40KB文件
+
+> pro：多级索引|块的访问效率分析（2018、2022）  
+
+</ul>
+
+##### 多次间接地址
+
+<ul>
+
+- 二次间接地址：
+  - 使用i.addr[11]
+  - 最大支持4GB+4MB+40KB文件
+
+- 三次间接地址：
+  - 使用i.addr[12]
+  - 最大支持4TB+4GB+4MB+40KB文件
+
+</ul>
+
+</ul>
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
