--- a/re_knowledge/文件/basic/structure/逻辑结构.md
+++ b/re_knowledge/文件/basic/structure/逻辑结构.md
@@ -1,6 +1,152 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 文件的逻辑结构
 
+<ul>
+
+- 文件的逻辑结构是指从用户角度出发所看到的文件的组织形式
+- 文件的物理结构（又称存储结构）是指将文件存储在外存上的存储组织形式，是用户所看不见的
+- 文件的逻辑结构与存储介质特性无关，它实际上是指在文件的内部，数据在逻辑上是如何组织起来的
+
+按逻辑结构，文件可划分为无结构文件和有结构文件两大类。
+
+### 无结构文件
+
+<ul>
+
+- 最简单的文件组织形式
+- 由字符流构成，又称流式文件
+- 特点：
+  - 长度以字节为单位
+  - 通过读/写指针访问
+  - 应用于源程序、可执行文件、库函数等
+- 局限性：
+  - 没有结构，只能通过穷举搜索访问记录
+  - 对很多应用不适用
+
+</ul>
+
+### 有结构文件
+
+<ul>
+
+- 由一个以上的记录构成，又称记录式文件
+
+#### 按记录长度分类
+
+<ul>
+
+##### 定长记录
+
+<ul>
+
+- 所有记录长度相同
+- 数据项位置和长度固定
+- 优点：
+  - 检索速度快
+  - 方便处理
+  - 广泛用于数据处理
+
+</ul>
+
+##### 变长记录
+
+<ul>
+
+- 各记录长度不一定相同
+- 原因：
+  - 数据项数目不同
+  - 数据项长度不定
+- 缺点：只能顺序查找，速度慢
+
+</ul>
+
+</ul>
+
+#### 按记录组织形式分类
+
+<ul>
+
+##### 顺序文件
+
+<ul>
+
+- 记录一个接一个顺序排列
+- 可包含定长或变长记录
+- 排列结构：
+  - 串结构：
+    - 记录顺序与关键字无关
+    - 按存入时间排列
+    - 需从头顺序查找
+  - 顺序结构：
+    - 按关键字顺序排列
+    - 定长记录可用折半查找
+- 特点：
+  - 批量操作效率最高
+  - 适合顺序存储设备
+  - 单记录操作性能差
+
+</ul>
+
+##### 索引文件
+
+<ul>
+
+- 建立索引表提高检索效率
+- 结构：
+  - 为每个记录设置索引表项
+  - 包含记录指针和长度
+  - 索引表按关键字排序
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/eb9d674d05888c7f26d7eac9891539314e3a96e19941c26b4ab65a74299eedbb.jpg)  
+图4.4索引文件示意图  
+
+- 优缺点：
+  - 优点：加快检索速度
+  - 缺点：增加存储开销
+
+</ul>
+
+##### 索引顺序文件
+
+<ul>
+
+- 结合顺序文件和索引文件特点
+- 组织方式：
+  - 记录分组存储
+  - 建立组首记录索引表
+  - 组内记录可无序
+  - 组间关键字有序
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/77c339574ccf62a58e641983cd07b2b604a07238b667f6c76d33f50290e230c7.jpg)  
+图4.5索引顺序文件示意图  
+
+- 查找效率：
+  - 顺序文件：平均需查找N/2次
+  - 索引顺序文件：仅需查找√N次
+- 特点：
+  - 提高查找效率
+  - 可采用多级索引
+  - 增加存储空间
+
+</ul>
+
+##### 直接文件或散列文件（HashFile）
+
+<ul>
+
+- 通过键值或散列函数直接定位记录
+- 特点：
+  - 存取速度高
+  - 可能产生冲突
+
+</ul>
+
+</ul>
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
