--- a/re_knowledge/文件/basic/控制块和索引节点.md
+++ b/re_knowledge/文件/basic/控制块和索引节点.md
@@ -1,5 +1,128 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 文件控制块和索引节点  
+
+<ul>
+
+与进程管理一样，为便于文件管理，引入了文件控制块的数据结构。  
+
+### 文件控制块和索引节点
+
+<ul>
+
+#### 文件控制块
+
+<ul>
+
+- FCB是存放控制文件需要的各种信息的数据结构，用于实现按名存取
+- FCB与文件一一对应，FCB的有序集合称为文件目录
+  - 一个FCB就是一个文件目录项
+  - 文件目录也被视为一个目录文件
+- 创建新文件时，系统建立FCB记录文件属性
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/42e00482cf2da53c34734fbedeb938ce4d87d374115b0af2a6d8e85421ac59c8.jpg)  
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/4c9849ace7df7caf82295ecbc683a1c21d78d5eae7b5a90795e9071a8342ca52.jpg)  
+
+##### FCB主要信息
+
+<ul>
+
+- 基本信息
+  - 文件名
+  - 文件的物理位置
+  - 文件的逻辑结构
+  - 文件的物理结构
+- 存取控制信息
+  - 文件主的存取权限
+  - 核准用户的存取权限
+  - 一般用户的存取权限
+- 使用信息
+  - 文件建立时间
+  - 上次修改时间
+
+</ul>
+
+</ul>
+
+#### 索引节点
+
+<ul>
+
+> pro：目录项结构的相关分析与计算（2020、2022）  
+
+##### 索引节点概述
+
+<ul>
+
+- 文件目录存放在磁盘上，大量文件会占用多个盘块
+- UNIX系统采用文件名和描述信息分离方法
+  - 描述信息形成索引节点(inode)数据结构
+  - 目录项仅包含文件名和索引节点号
+
+> pro：索引1节点号与文件容量的关系（2018、2020）  
+
+</ul>
+
+##### 索引节点效率分析
+
+<ul>
+
+- FCB方案
+  - FCB大小：64B
+  - 盘块大小：1KB
+  - 每盘块存放16个FCB
+  - 640个FCB需要平均20次磁盘启动
+- UNIX目录项方案
+  - 目录项大小：16B(14B文件名+2B索引节点号)
+  - 每盘块存放64个目录项
+  - 磁盘启动次数减少到原来的1/4
+
+</ul>
+
+##### 索引节点类型
+
+<ul>
+
+###### 磁盘索引节点
+
+<ul>
+
+- 每个文件唯一对应一个磁盘索引节点
+- 主要内容：
+  - 文件主标识符
+  - 文件类型
+  - 文件存取权限
+  - 文件物理地址(13个地址项)
+  - 文件长度
+  - 文件链接计数
+  - 文件存取时间
+
+</ul>
+
+###### 内存索引节点
+
+<ul>
+
+- 文件打开时，磁盘索引节点复制到内存
+- 额外内容：
+  - 索引节点号
+  - 状态(上锁/修改标记)
+  - 访问计数
+  - 逻辑设备号
+  - 链接指针
+
+</ul>
+
+</ul>
+
+</ul>
+
+- FCB或索引节点类比：相当于图书馆中图书的索书号
+
+</ul>
+
+</ul>
 
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
