--- a/re_knowledge/文件/basic/概念.md
+++ b/re_knowledge/文件/basic/概念.md
@@ -1,5 +1,178 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+<ul>
+
+在学习本节时，请读者思考以下问题  
+
+1）什么是文件？  
+
+2）单个文件的逻辑结构和物理结构之间是否存在某些制约关系？  
+
+本节内容较为抽象，要注意区分文件的逻辑结构和物理结构。在学习过程中，可尝试以上面的两个问题为线索，构建整个文件系统的概念。在前面的学习中，曾经提醒过读者不要忽略对基本概念的理解。从历年的情况来看，大部分同学对进程管理、内存管理有较好的掌握，但对于文件管理及后面的1/O管理，往往理解不太深入。在考试中，即使面对一些基本问题也容易失分，这十分可惜。主要原因还是对概念的理解不够全面和透彻，希望读者能够关注这个问题。  
+
+
+
+## 基本概念
+
+<ul>
+
+### 文件的本质
+
+<ul>
+
+- 文件是以硬盘为载体的存储在计算机上的信息集合
+  - 可以是文本文档、图片、程序等
+- 系统资源调度与文件的关系
+  - 系统运行时：以进程为基本单位进行资源调度和分配
+  - 用户输入输出：以文件为基本单位
+- 文件系统的需求
+  - 大多数应用程序通过文件实现输入输出
+  - 用户需要访问、修改和保存文件等管理功能
+  - 系统需提供文件管理系统来实现这些需求
+
+</ul>
+
+### 文件的定义
+
+<ul>
+
+#### 文件的组成要素
+
+<ul>
+
+- 存储空间中的数据
+- 分类和索引信息
+- 访问权限信息
+
+</ul>
+
+#### 图书馆管理类比
+
+<ul>
+
+- 书籍内容 ≈ 文件数据
+- 分类编号系统 ≈ 文件分类和查找
+- 借阅权限 ≈ 文件访问权限
+
+</ul>
+
+#### 文件系统的用户视角
+
+<ul>
+
+- 用户关注点
+  - 文件命名、分类和查找
+  - 文件数据安全性
+  - 可进行的操作
+- 用户不关注的细节
+  - 文件存储方式
+  - 辅存区域管理
+
+</ul>
+
+#### 文件的层次结构
+
+<ul>
+
+##### 数据项
+
+<ul>
+
+- 基本数据项：描述对象某属性的最小逻辑单位
+- 组合数据项：多个基本数据项的组合
+
+</ul>
+
+##### 记录
+
+<ul>
+
+- 相关数据项的集合
+- 用于描述对象某方面属性
+
+</ul>
+
+##### 文件类型
+
+<ul>
+
+- 有结构文件：由相似记录组成
+- 无结构文件：视为字符流
+
+</ul>
+
+</ul>
+
+</ul>
+
+### 文件的属性
+
+<ul>
+
+- 基本属性列表
+  1. 名称：唯一标识
+  2. 类型：支持不同文件系统
+  3. 创建者ID
+  4. 所有者ID
+  5. 位置指针
+  6. 大小信息
+  7. 访问控制信息
+  8. 时间相关信息
+     - 创建时间
+     - 最后修改时间
+     - 最后存取时间
+
+> pro：文件属性信息的存储位置（2009）
+
+</ul>
+
+### 文件的分类
+
+<ul>
+
+#### 按性质和用途
+
+<ul>
+
+- 系统文件
+- 用户文件
+- 库文件
+
+</ul>
+
+#### 按数据形式
+
+<ul>
+
+- 源文件
+- 目标文件
+- 可执行文件
+
+</ul>
+
+#### 按存取控制属性
+
+<ul>
+
+- 可执行文件
+- 只读文件
+- 读/写文件
+
+</ul>
+
+#### 按组织形式和处理方式
+
+<ul>
+
+- 普通文件
+- 目录文件
+- 特殊文件
+
+</ul>
+
+</ul>
+
+</ul>
 
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
