--- a/re_knowledge/文件/文件系统/外存空闲空间管理.md
+++ b/re_knowledge/文件/文件系统/外存空闲空间管理.md
@@ -1,6 +1,225 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 外存空闲空间管理
 
+<ul>
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/2219149a41148f7dda747f0a8d668da014f9802a01e9dd088a752e14a13e37ff.jpg)
+
+### 卷的概念与组织
+
+<ul>
+
+- 卷的形式
+  - 磁盘的一部分
+  - 整个磁盘
+  - 多个磁盘组成的RAID集
+- 卷的结构
+  - 文件区与目录区分离
+  - 需要初始化
+  - 包含目录区和文件区
+  - 建立空闲空间管理表格
+  - 存放卷信息的超级块
+
+</ul>
+
+### 存储管理特点
+
+<ul>
+
+- 以块为单位交换信息
+- 管理重点是空闲块
+  - 组织
+  - 分配
+  - 回收
+
+> pro：磁盘空闲空间管理的方法（2019、2024）
+
+</ul>
+
+### 外存空闲空间管理方法
+
+<ul>
+
+#### 空闲表法
+
+<ul>
+
+- 属于连续分配方式，类似内存动态分区分配
+- 系统建立空闲表
+  - 包含表项序号
+  - 空闲区第一个盘块号
+  - 空闲区盘块数
+- 按起始盘块号递增排列
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/7a85c6c59a536a2981f83f60d296531437af7ada9889aa970af846ea0202ab60.jpg)  
+
+##### 盘块分配
+
+<ul>
+
+- 采用首次适应或最佳适应算法
+- 顺序检索空闲表找到满足需求的空闲区
+- 分配后修改空闲表
+
+</ul>
+
+##### 盘块回收
+
+<ul>
+
+- 类似内存回收方法
+- 考虑与前后空闲区的合并
+
+</ul>
+
+##### 优点
+
+<ul>
+
+- 分配速度高
+- 减少磁盘I/O频率
+- 适合小文件连续分配
+
+</ul>
+
+</ul>
+
+#### 空闲链表法
+
+<ul>
+
+##### 空闲盘块链
+
+<ul>
+
+- 以盘块为单位组成链表
+- 每个盘块指向下一空闲盘块
+###### 优点
+- 分配回收单个盘块简单
+###### 缺点
+- 分配多个盘块效率低
+- 链表较长
+
+</ul>
+
+##### 空闲盘区链
+
+<ul>
+
+- 以盘区为单位组成链表
+- 每个盘区包含:
+  - 下一盘区指针
+  - 本盘区盘块数
+###### 优点
+- 分配回收效率高
+- 链表较短
+###### 缺点
+- 分配回收过程复杂
+
+</ul>
+
+</ul>
+
+#### 位示图法
+
+<ul>
+
+> pro：位示图的应用及相关计算（2010、2014、2015、2023）  
+
+- 用二进制位表示盘块使用情况
+  - 0表示空闲
+  - 1表示已分配
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/59068c9a3968e8f67a2856b22b51f92756d1eb6402e47576acf293be7b6fe767.jpg)  
+
+##### 盘块分配
+
+<ul>
+
+- 扫描位示图找0值位
+- 转换为盘块号
+- 修改位示图为1
+
+</ul>
+
+##### 盘块回收
+
+<ul>
+
+- 将盘块号转换为位示图位置
+- 修改位示图为0
+
+</ul>
+
+> attention:  
+
+如无特别提示，本书所用位示图的行和列都从1开始编号。特别注意，若题中指明从0开始编号，则上述计算方法要进行相应的调整。  
+
+##### 优缺点
+
+<ul>
+
+###### 优点
+
+<ul>
+
+- 易找到连续空闲盘块
+- 占用空间少
+- 可保存在内存中
+
+</ul>
+
+###### 缺点
+
+<ul>
+
+- 随磁盘容量增加而增大
+- 适用于小型计算机
+
+</ul>
+
+</ul>
+
+</ul>
+
+#### 成组链接法
+
+<ul>
+
+- 结合空闲表和链表思想
+- 空闲盘块分组管理
+  - 每组100个盘块
+  - 首块记录下组信息
+  - 首组信息存于内存栈中
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/8240049bc876fec1a0a439ae8f42ab9e86807c0071b8a6c88f7e9a822229ad22.jpg)  
+
+##### 盘块分配
+
+<ul>
+
+- 从栈中分配盘块
+- 栈空时读入新组信息
+- 更新空闲块计数
+
+</ul>
+
+##### 盘块回收
+
+<ul>
+
+- 回收块号存入栈顶
+- 栈满时建立新组
+- 更新空闲块计数
+
+</ul>
+
+</ul>
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
