--- a/re_knowledge/文件/文件系统/文件系统挂载.md
+++ b/re_knowledge/文件/文件系统/文件系统挂载.md
@@ -1,6 +1,76 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 文件系统挂载
 
+<ul>
+
+### Windows文件系统挂载
+
+<ul>
+
+- 维护扩展的两级目录结构
+  - 使用驱动器字母表示设备和卷
+  - 卷具有常规树结构目录
+    - 与驱动器号相关联
+    - 含有指向已安装文件系统的指针
+- 文件路径形式
+  - 格式为driver-letter:path\to\file
+  - 访问流程
+    - 操作系统找到相应文件系统指针
+    - 遍历设备目录结构查找指定文件
+- 新版Windows特点
+  - 允许文件系统安装在目录树任意位置(类似UNIX)
+  - 启动时自动发现和安装所有设备文件系统
+
+</ul>
+
+### UNIX文件系统挂载
+
+<ul>
+
+- 根文件系统
+  - 系统启动时直接安装
+  - 是内核映像所在文件系统
+- 其他文件系统
+  - 必须先挂载到根文件系统目录才能访问
+  - 挂载方式
+    - 系统初始化时自动安装
+    - 用户手动挂载到已安装文件系统目录
+- 安装点特点
+  - 同一设备可有多个安装点
+  - 同一安装点同时只能挂载一个设备
+  - 通过安装点目录可读取设备数据
+
+#### 挂载示例
+
+<ul>
+
+- 将ext2文件系统挂载到/flp:
+  - 命令: mount -t ext2/dev/fd0/flp
+- 卸载文件系统:
+  - 使用umount命令
+
+</ul>
+
+</ul>
+
+### 本章主线
+
+<ul>
+
+- 第一条主线：文件抽象数据类型
+  - 逻辑结构
+  - 物理结构
+- 第二条主线：操作系统文件管理
+  - 多文件逻辑结构组织(目录)
+  - 用户文件服务请求处理(磁盘管理)
+- 学习建议
+  - 宏观把握知识为微观掌控服务
+  - 通过反复做题思考加深理解
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
