--- a/re_knowledge/文件/文件系统/虚拟文件系统.md
+++ b/re_knowledge/文件/文件系统/虚拟文件系统.md
@@ -1,5 +1,131 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 虚拟文件系统
+
+<ul>
+
+### 概述
+
+<ul>
+
+- 虚拟文件系统（VFS）屏蔽了不同文件系统的差异和操作细节
+- 向上为用户提供了文件操作的统一调用接口
+  - 用户程序通过VFS提供的统一调用函数操作不同文件系统的文件
+  - 无须考虑具体的文件系统和实际的存储介质
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/f11f48d5a97ebc8b67d6d6cd3c00f5d0c1501f459b1d8a566b733057e6a7a4fe.jpg)  
+图4.24虚拟文件系统的示意图  
+
+</ul>
+
+### 对象类型
+
+<ul>
+
+- 采用面向对象思想
+- 抽象出通用文件系统模型
+- 定义通用文件系统支持的接口
+- 系统抽象了四种对象类型
+  - 每个对象包含数据和函数指针
+  - 函数指针指向操作这些数据的文件系统实现函数
+
+#### 1. 超级块对象
+
+<ul>
+
+- 表示已安装的特定文件系统
+- 对应磁盘上特定扇区的文件系统超级块
+- 存储已安装文件系统的元信息
+- 主要操作函数：
+  - 分配inode
+  - 销毁inode
+  - 读inode
+  - 写inode
+
+</ul>
+
+#### 2. 索引节点对象
+
+<ul>
+
+- 表示特定文件
+- 特点：
+  - 与文件一对一关系
+  - 仅在文件被访问时创建
+  - 复制磁盘索引节点数据
+- 提供操作函数：
+  - 创建新索引节点
+  - 创建硬链接
+  - 创建新目录
+
+</ul>
+
+#### 3. 目录项对象
+
+<ul>
+
+- 表示特定目录项
+- 组成：
+  - 包含指向关联索引节点的指针
+  - 包含指向父目录和子目录的指针
+- 特点：
+  - 磁盘上无对应数据结构
+  - 由VFS在遍历路径过程中解析生成
+
+</ul>
+
+#### 4. 文件对象
+
+<ul>
+
+- 表示进程相关的已打开文件
+- 操作方式：
+  - 通过open()打开
+  - 通过close()关闭
+- 特点：
+  - 类似进程和程序的关系
+  - 仅代表进程视角的已打开文件
+  - 指向其索引节点
+- 包含内容：
+  - 相关联的目录项对象
+  - 文件系统信息
+  - 文件指针
+  - 操作函数
+
+</ul>
+
+</ul>
+
+### 系统调用处理流程
+
+<ul>
+
+- 进程发起面向文件的系统调用
+- 内核调用VFS函数
+- VFS函数调用目标文件系统相应函数
+- 转换为面向设备的指令
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/d284c15b75a406a133532a466740a742df343db72bbdb92ae9c3537a93023937.jpg)  
+图4.25write（系统调用操作示意图  
+
+</ul>
+
+### VFS特点
+
+<ul>
+
+- 用户无需关心文件系统实现细节
+- 对文件系统细节进行抽象
+- 使不同文件系统对进程表现一致
+- 存在特点：
+  - 仅存在于内存中
+  - 不存在于外存空间
+  - 系统启动时建立
+  - 系统关闭时消亡
+
+</ul>
+
+</ul>
 
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
