--- a/re_knowledge/文件/目录/operation/实现.md
+++ b/re_knowledge/文件/目录/operation/实现.md
@@ -1,6 +1,73 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## * 目录实现
 
+<ul>
+
+- 文件访问过程：
+  - 操作系统使用路径名找到相应目录项。
+  - 目录项提供查找文件磁盘块所需的信息。
+
+- 目录实现方法：
+  - 基本方法：线性列表和哈希表。
+  - 线性列表实现对应线性查找。
+  - 哈希表实现对应散列查找。
+
+- 目录查找的目的：
+  - 目录的实现是为了高效查找文件。
+
+### 目录实现方法
+
+<ul>
+
+#### 线性列表
+
+<ul>
+
+- 实现方式：
+  - 采用文件名和数据块指针的线性列表
+- 操作过程：
+  - 创建文件：
+    - 搜索目录确认无同名文件
+    - 增加新目录项
+  - 删除文件：
+    - 根据文件名搜索目录
+    - 释放分配空间
+- 目录项重用方法：
+  - 标记为不再使用
+  - 加入空闲目录项列表
+  - 将最后目录项复制到空闲位置并减少长度
+- 特点：
+  - 优点：实现简单
+  - 缺点：查找费时
+
+</ul>
+
+#### 哈希表
+
+<ul>
+
+- 实现原理：
+  - 根据文件名计算哈希值
+  - 返回指向线性列表元素的指针
+- 特点：
+  - 优点：
+    - 查找迅速
+    - 插入删除简单
+  - 缺点：需要避免冲突
+- 优化措施：
+  - 将当前文件目录复制到内存
+  - 减少磁盘I/O操作
+  - 提高系统速度
+
+</ul>
+
+</ul>
+
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
