--- a/re_knowledge/文件/目录/operation/操作.md
+++ b/re_knowledge/文件/目录/operation/操作.md
@@ -1,6 +1,25 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 目录的操作  
 
+<ul>
+
+- 理解文件系统需求的基础：
+  - 考虑目录层次上所需执行的操作，有助于整体理解文件系统。
+
+- 目录层次的操作：
+  - 搜索：找到文件的对应目录项。
+  - 创建文件：在目录中增加一个目录项。
+  - 删除文件：在目录中删除相应的目录项。
+  - 创建目录：在树形目录结构中创建用户文件目录和子目录。
+  - 删除目录：
+    - 方式1：不删除非空目录，需先删除目录中所有文件和子目录。
+    - 方式2：可删除非空目录，文件和子目录同时被删除。
+  - 移动目录：在不同父目录之间移动文件或子目录，路径名随之改变。
+  - 显示目录：请求显示目录内容，如所有文件及属性。
+  - 修改目录：改变保存在目录中的文件属性，需修改相应的目录项。
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
