--- a/re_knowledge/文件/目录/文件共享.md
+++ b/re_knowledge/文件/目录/文件共享.md
@@ -1,5 +1,90 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+### 文件共享
+
+<ul>
+
+- 基本概念：
+  - 多用户共享同一文件
+  - 系统只保留一个副本
+- 实现基础：
+  - 基于无环图目录结构
+  - 复制被共享文件物理地址
+
+#### 基于索引节点的共享方式（硬链接）
+
+<ul>
+
+> pro：硬链接和软链接文件中引用计数值的分析（2009）
+
+- 实现机制：
+  - 文件信息存储在索引节点
+  - 目录项只含文件名和索引节点指针
+- 链接计数管理：
+  - 使用count记录链接数
+  - 表示用户目录项数目
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/23c4e4eff9fd9aa7d4de10b736a43f80cb3862d258647ca26e827afb42afe5c1.jpg)
+
+- 操作过程：
+  - 创建文件：
+    - 设置文件所有者
+    - count置为1
+  - 共享文件：
+    - 增加目录项
+    - count加1
+  - 删除文件：
+    - 减少count
+    - count为0时才真正删除
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/f09ad53c3f500d76eed8bf8c04e452185e641e4bc13bb00ea697950994fd35db.jpg)
+
+</ul>
+
+#### 利用符号链实现文件共享（软链接）
+
+<ul>
+
+- 实现机制：
+  - 创建LINK类型新文件
+  - 存储被链接文件路径名
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/f35b3df4105ca5fd7da8809fed7378ce45b1c7a00fed4b4066c72c32df50a40d.jpg)
+
+> pro：软链接方式册除共享文件后的情况（2021）
+
+- 特点：
+  - 访问机制：
+    - 只有文件主有索引节点指针
+    - 其他用户只有路径名
+  - 删除处理：
+    - 不会产生悬空指针
+    - 访问失败时自动删除符号链接
+  - 性能考虑：
+    - 需多次读盘
+    - 增加访问开销
+    - 索引节点占用磁盘空间
+- 网络应用：
+  - 提供机器网络地址
+  - 提供文件路径名
+
+##### 硬链接与软链接对比
+
+<ul>
+
+- 硬链接：
+  - 多指针指向一个索引节点
+  - 索引节点存在时指针有效
+- 软链接：
+  - 保存文件访问路径
+  - 根据路径寻找文件
+- 性能比较：
+  - 硬链接查找速度更快
+
+</ul>
+
+</ul>
+
 
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
