--- a/re_knowledge/文件/目录/概念.md
+++ b/re_knowledge/文件/目录/概念.md
@@ -1,6 +1,18 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+### 文件目录定义与管理要求
 
+<ul>
+
+- FCB的有序集合称为文件目录，一个FCB就是一个文件目录项
+- 目录管理的基本要求：
+  - 实现"按名存取"，提供文件名和文件之间的映射
+  - 提高目录检索速度，提升系统性能
+  - 支持多用户文件共享
+  - 允许不同用户使用相同文件名
+  - 通过树形结构实现目录管理
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
