--- a/re_knowledge/文件/目录/结构.md
+++ b/re_knowledge/文件/目录/结构.md
@@ -1,6 +1,94 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+### 目录结构
 
+<ul>
+
+#### 单级目录结构
+
+<ul>
+
+- 特点：整个文件系统只有一张目录表
+- 操作流程：
+  - 新建文件：检查重名、增加目录项
+  - 访问文件：查找FCB、检查合法性
+  - 删除文件：查找目录项、回收空间
+- 缺点：
+  - 查找速度慢
+  - 不允许文件重名
+  - 不便于文件共享
+  - 不适用于多用户系统
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/a61a9759c73160f0410aadcb978b5291de233ad43c64000066bf629bba768f52.jpg)  
+
+</ul>
+
+#### 两级目录结构
+
+<ul>
+
+- 组成：
+  - 主文件目录(MFD)：记录用户名和UFD位置
+  - 用户文件目录(UFD)：记录用户文件的FCB
+- 优点：
+  - 提高检索速度
+  - 解决多用户文件重名问题
+  - 可实现访问限制
+- 缺点：
+  - 缺乏灵活性
+  - 不能对文件分类
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/63a7177d5969ca0b8ca50c1b869d98e7924eee92b08afbfb7b8996fbdc1905c2.jpg)  
+
+</ul>
+
+#### 树形目录结构
+
+<ul>
+
+> pro：设置当前工作目录的作用（2010）  
+
+- 文件路径：
+  - 绝对路径：从根目录出发的完整路径
+  - 相对路径：从当前目录出发的路径
+- 当前目录特性：
+  - 每个用户有独立当前目录
+  - 登录时自动进入用户当前目录
+  - 可通过系统调用改变当前目录
+- 优点：
+  - 便于文件分类
+  - 层次结构清晰
+  - 有效进行文件管理和保护
+- 缺点：
+  - 查找文件需逐级访问，增加磁盘访问次数
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/fdd6fe735585e7b6f814f6c2c23dd8171f96c5fec74b938d4f11b5e63d299679.jpg)  
+
+</ul>
+
+#### 无环图目录结构
+
+<ul>
+
+- 基于树形结构的扩展：
+  - 增加指向同一节点的有向边
+  - 允许目录共享子目录或文件
+- 共享节点管理：
+  - 设置共享计数器
+  - 共享链增加时计数器+1
+  - 删除请求时计数器-1
+  - 计数器为0时才真正删除节点
+- 特点：
+  - 优点：方便实现文件共享
+  - 缺点：系统管理更复杂
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/32f228bab6112191e728f9eea4662365b7102dc88891bcbfb93ea10f5c560aa8.jpg)  
+
+</ul>
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
