--- a/re_knowledge/进程 线程/CPU调度/切换&算法/调度算法.md
+++ b/re_knowledge/进程 线程/CPU调度/切换&算法/调度算法.md
@@ -1,6 +1,300 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 典型的调度算法
 
+<ul>
+
+> pro：各种调度算法的特点与对比（2009、2011、2014）
+
+操作系统中存在多种调度算法，有的调度算法适用于作业调度，有的调度算法适用于进程调度，有的调度算法两者都适用。下面介绍几种常用的调度算法。
+
+### 先来先服务（FCFS）调度算法
+
+<ul>
+
+> pro：FIFO调度算法的思想（2017）
+
+#### 基本原理
+- 作业调度应用
+  - 从后备作业队列选择最先进入的作业
+  - 调入内存并分配资源
+  - 创建进程并放入就绪队列
+- 进程调度应用
+  - 从就绪队列选择最先进入的进程
+  - 分配CPU使其运行
+  - 直到完成或阻塞才释放CPU
+
+#### 性能分析示例
+
+<ul>
+
+> pro：批处理系统中作业完成时间的分析（2012、2016）
+
+- 实例参数
+  - 4个作业的提交时间：8,8.4,8.8,9
+  - 运行时间：2,1,0.5,0.2
+- 性能指标计算
+  ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/71bce0079791dd4ca8962d3658de3c744a6b1040134b154650e16bc9cb314fbc.jpg)
+  - 平均等待时间：(0+1.6+2.2+2.5)/4=1.575
+  - 平均周转时间：(2+2.6+2.7+2.7)/4=2.5
+  - 平均带权周转时间：(1+2.6+5.4+13.5)/4=5.625
+
+</ul>
+
+#### 算法特点
+- 优点
+  - 算法简单
+  - 对所有作业公平
+  - 适合作为其他调度策略的补充
+- 缺点
+  - 效率低
+  - 不利于短作业
+  - 不利于I/O繁忙型作业
+  - 不适合分时系统和实时系统
+
+</ul>
+
+### 短作业优先（SJF）调度算法
+
+<ul>
+
+> pro：SJF调度算法的思想（2017）
+
+#### 基本原理
+- 短作业优先(SJF)
+  - 从后备队列选择估计运行时间最短的作业
+  - 调入内存运行
+- 短进程优先(SPF)
+  - 从就绪队列选择估计运行时间最短的进程
+  - 分配CPU执行
+  - 完成或阻塞时释放CPU
+
+#### 性能分析示例
+- 实例数据分析
+  ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/3e627e4443655f02ad8e96b1151a083196d164b190b937102d743f45c4f90bb1.jpg)
+  - 平均等待时间：(0+2.3+1.4+1)/4=1.175
+  - 平均周转时间：(2+3.3+1.9+1.2)/4=2.1
+  - 平均带权周转时间：(1+3.3+3.8+6)/4=3.525
+
+#### 算法缺点
+- 对长作业不利
+  - 长作业周转时间增加
+  - 可能产生"饥饿"现象
+- 未考虑作业紧迫程度
+- 依赖用户提供的估计时间
+  - 可能不准确
+  - 用户可能故意缩短估计时间
+
+#### 算法变体
+- 抢占式SPF
+  - 也称最短剩余时间优先
+  - 新进程到达时比较剩余时间
+  - 可能暂停当前进程
+
+> attention：
+
+短作业（SJF）调度算法的平均等待时间、平均周转时间是最优的。
+
+</ul>
+
+### 高响应比优先调度算法
+
+<ul>
+
+#### 基本特征
+- 主要用于作业调度
+- 综合平衡FCFS和SJF算法
+- 考虑因素
+  - 作业等待时间
+  - 估计运行时间
+
+#### 响应比计算
+- 计算公式
+  - 响应比 = (等待时间+要求服务时间)/要求服务时间
+- 响应比特点
+  - 等待时间相同时，服务时间短的响应比高
+  - 服务时间相同时，等待时间长的响应比高
+  - 长作业可通过等待时间增加提高响应比
+
+</ul>
+
+### 优先级调度算法
+
+<ul>
+
+#### 基本特征
+- 适用范围
+  - 可用于作业调度
+  - 可用于进程调度
+- 优先级含义
+  - 用于描述作业的紧迫程度
+
+#### 调度方式
+- 作业调度
+  - 从后备队列选择优先级最高的作业
+  - 调入内存并创建进程
+- 进程调度
+  - 从就绪队列选择优先级最高的进程
+  - 分配CPU执行
+
+#### 调度类型
+
+<ul>
+
+> pro：非抢占式优先级调度算法的应用分析（2018）
+
+##### 非抢占式优先级调度
+- 运行进程不被打断
+- 直到进程主动让出CPU才调度新进程
+
+> pro：抢占式优先级调度算法的应用分析（2022、2023）
+
+##### 抢占式优先级调度
+- 高优先级进程可抢占运行进程
+- 立即暂停当前进程并调度新进程
+
+</ul>
+
+#### 优先级类型
+
+<ul>
+
+> pro：静态优先级和动态优先级的分析（2016）
+
+##### 静态优先级
+- 特点
+  - 创建时确定
+  - 运行期间不变
+- 依据
+  - 进程类型
+  - 资源要求
+  - 用户要求
+- 优缺点
+  - 优点：简单，开销小
+  - 缺点：不够精确，可能饿死
+
+> pro：调整进程优先级的合理时机（2010）
+
+##### 动态优先级
+- 特点
+  - 初始优先级可变
+  - 随时间动态调整
+- 调整机制
+  - 等待时间增加提高优先级
+  - 确保低优先级进程最终获得CPU
+
+</ul>
+
+#### 优先级设置原则
+- 系统进程 > 用户进程
+  - 系统进程作为管理者优先级更高
+
+- 交互型 > 非交互型
+  - 前台进程优先于后台进程
+  - 保证用户交互响应速度
+
+> pro：进程优先级的设置：I/O型和计算型（2013）
+
+- I/O型 > 计算型
+  - I/O设备速度慢于CPU
+  - 提前启动I/O提升系统效率
+
+</ul>
+
+### 时间片轮转（RR）调度算法
+
+<ul>
+
+> pro: 时间片轮转调度算法的原理（2021、2024）
+
+#### 基本原理
+- 适用于分时系统
+- 运行机制
+  - 就绪进程FCFS排队
+  - 定时产生时钟中断
+  - 每个进程执行一个时间片
+  - 时间片用完进程返回队尾
+
+#### 调度触发
+- 时间片未完成时
+  - 进程完成立即调度
+- 时间片用完时
+  - 时钟中断触发调度
+
+> pro：时间片轮转调度算法的特点（2017）
+
+#### 时间片设置
+- 影响因素
+  - 系统响应时间
+  - 就绪队列进程数
+  - 系统处理能力
+- 大小选择
+  - 过大退化为FCFS
+  - 过小增加切换开销
+
+</ul>
+
+### 多级队列调度算法
+
+<ul>
+
+#### 基本特征
+- 设置多个就绪队列
+- 不同类型进程分配到不同队列
+- 每个队列可用不同调度算法
+
+#### 实现机制
+- 队列优先级设置
+  - 同队列内进程可设不同优先级
+  - 不同队列间可设优先级
+- 多CPU系统支持
+  - 每CPU可设独立就绪队列
+  - 可实施不同调度策略
+
+</ul>
+
+### 多级反馈队列调度算法
+
+<ul>
+
+> pro：多级反馈队列调度算法的应用分析（2019）
+
+#### 算法特点
+- 融合多种算法优点
+  - 时间片轮转
+  - 优先级调度
+- 动态调整机制
+  - 调整进程优先级
+  - 调整时间片大小
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/3023703bf0e3b363dc5e01064053932a2178825f747e4c88ea109ba1efb82934.jpg)
+
+> pro：多级反馈队列调度算法的实现思想（2020）
+
+#### 实现思想
+- 队列设置
+  - 多级就绪队列
+  - 优先级逐级降低
+  - 时间片逐级增加
+- 进程调度
+  - 新进程进入最高级队列
+  - 时间片用完降级
+  - 最低级采用轮转方式
+- 优先级处理
+  - 高优先级队列优先调度
+  - 高优先级进程可抢占低优先级
+
+#### 算法优势
+- 用户类型适应
+  - 终端型：短作业优先
+  - 短批处理：较短周转时间
+  - 长批处理：避免饥饿
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/3f58ae6aca33d8e74ff64d9d67034421710e0d3eb7e9b23e14633164897d2541.jpg)
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
