--- a/re_knowledge/进程 线程/CPU调度/切换&算法/进程切换.md
+++ b/re_knowledge/进程 线程/CPU调度/切换&算法/进程切换.md
@@ -1,6 +1,73 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 进程切换
 
+<ul>
+
+> pro：进程调度前后CPU模式的变化（2023）
+
+### 进程与内核关系
+- 进程的基本操作需要通过系统调用进入内核完成：
+  - 进程创建
+  - 进程撤销
+  - I/O操作请求
+- 进程切换在内核支持下实现
+- 所有进程都在操作系统内核支持下运行
+
+### 上下文切换
+
+<ul>
+
+> pro：切换进程时的操作（2024）
+
+#### 上下文切换定义与内容
+- 切换CPU到另一个进程需要：
+  - 保存当前进程状态
+  - 恢复另一个进程状态
+- 进程上下文采用PCB表示，包含：
+  - CPU寄存器值
+  - 进程状态
+  - 内存管理信息
+
+#### 上下文切换流程
+1. 挂起进程
+   - 将CPU上下文保存到PCB
+   - 包括程序计数器和其他寄存器
+2. PCB队列调整
+   - 将进程PCB移入相应队列
+   - 如就绪队列、阻塞队列等
+3. 新进程选择
+   - 选择另一进程执行
+   - 更新其PCB
+4. 上下文恢复
+   - 恢复新进程的CPU上下文
+5. 程序执行
+   - 跳转到新进程PCB中程序计数器指向的位置
+
+#### 上下文切换开销
+- 计算密集型操作
+- 消耗大量CPU时间
+- 每次切换需要纳秒量级时间
+- 优化方案：
+  - 某些CPU提供多个寄存器组
+  - 通过改变寄存器组指针简化切换
+
+#### 上下文切换与模式切换的区别
+- 模式切换特点：
+  - CPU可能仍执行同一进程
+  - 在用户态和内核态间切换
+  - 不改变当前进程
+- 上下文切换特点：
+  - 只能在内核态发生
+  - 是多任务系统必需特性
+
+</ul>
+
+> attention：
+
+调度和切换的区别：调度是指决定资源分配给哪个进程的行为，是一种决策行为；切换是指实际分配的行为，是执行行为。一般来说，先有资源的调度，然后才有进程的切换。
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
