--- a/re_knowledge/进程 线程/CPU调度/实现.md
+++ b/re_knowledge/进程 线程/CPU调度/实现.md
@@ -1,5 +1,150 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 调度的实现
+
+<ul>
+
+### 调度程序（调度器）
+
+<ul>
+
+#### 调度程序的组成部分
+
+<ul>
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/dfa12b23fc0749597359e6144d67fec5ae58c52eea70cfd649d23e9485a3b0e5.jpg)  
+图2.8调度程序的结构
+
+- 排队器
+  - 将系统中的所有就绪进程按照一定的策略排成一个或多个队列
+  - 每当有进程转为就绪态时，将其插入相应就绪队列
+
+- 分派器
+  - 依据调度程序所选的进程，将其从就绪队列中取出
+  - 将CPU分配给新进程
+
+- 上下文切换器
+  - 执行两对上下文切换操作：
+    - 第一对：保存当前进程上下文到PCB，装入分派程序上下文
+    - 第二对：移出分派程序上下文，装入新进程CPU现场信息
+  - 优化方法：
+    - 采用两组寄存器(内核组和用户组)
+    - 通过改变指针指向来减少切换时间
+
+</ul>
+
+</ul>
+
+### 调度的时机、切换与过程
+
+<ul>
+
+#### 调度时机
+
+<ul>
+
+> pro：可以进行CPU调度的事件或时机（2012、2021）
+
+- 可以进行调度的情况：
+  - 创建新进程后
+  - 进程结束或异常终止后
+  - 进程被阻塞时
+  - I/O设备完成时
+  - 更高优先级进程就绪时
+  - 当前进程时间片用完时
+
+</ul>
+
+#### 进程切换过程
+- 保存原进程现场信息
+- 恢复被调度进程现场
+- 切换步骤：
+  - 将原进程信息推入内核堆栈
+  - 更新堆栈指针
+  - 装入新进程现场信息
+  - 更新进程空间指针
+  - 重设PC寄存器
+
+#### 不可调度情况
+- 中断处理过程中
+- 原子操作过程中：
+  - 加锁、解锁操作
+  - 中断现场保护
+  - 恢复等原子操作
+
+</ul>
+
+### 进程调度的方式
+
+<ul>
+
+#### 非抢占调度方式
+- 特点：
+  - 正在执行的进程继续执行直至完成或阻塞
+  - 实现简单，系统开销小
+  - 适用于早期批处理系统
+  - 不适用于分时系统和实时系统
+
+#### 抢占调度方式
+- 特点：
+  - 允许暂停当前进程
+  - 将CPU分配给更重要进程
+  - 提高系统吞吐率和响应效率
+- 抢占原则：
+  - 优先权原则
+  - 短进程优先原则
+  - 时间片原则
+
+</ul>
+
+### 闲连进程
+
+<ul>
+
+#### 闲逛进程的特点
+- 在进程切换时，如果系统中没有就绪进程，就会调度闲逛进程（IdleProcess）运行
+  - PID为0
+  - 如果没有其他进程就绪，该进程就一直运行
+  - 并在指令周期后测试中断
+- 优先级特征
+  - 优先级最低
+  - 没有就绪进程时才会运行
+  - 只要有进程就绪，就会立即让出CPU
+- 资源需求
+  - 不需要CPU之外的资源
+  - 不会被阻塞
+
+</ul>
+
+### 两种线程的调度
+
+<ul>
+
+#### 用户级线程调度
+- 内核不知道线程存在
+- 内核选择进程并给予时间控制
+- 由进程中的调度程序决定线程运行
+
+#### 内核级线程调度
+- 内核直接选择特定线程运行
+- 通常不考虑线程所属进程
+- 对被选择线程赋予时间片
+- 超过时间片会强制挂起
+
+#### 线程切换比较
+- 用户级线程切换
+  - 在同一进程中进行
+  - 仅需少量机器指令
+- 内核级线程切换
+  - 需要完整上下文切换
+  - 需要修改内存映像
+  - 使高速缓存失效
+  - 导致较大延迟
+
+</ul>
+
+
+</ul>
 
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
