--- a/re_knowledge/进程 线程/CPU调度/目标.md
+++ b/re_knowledge/进程 线程/CPU调度/目标.md
@@ -1,5 +1,67 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+### 调度的目标
+
+<ul>
+
+#### CPU利用率
+- CPU是重要昂贵资源
+- 应保持"忙"状态以最大化利用率
+- 计算方法：
+  - CPU利用率 = CPU有效工作时间/(CPU有效工作时间+CPU空闲等待时间)
+
+> attention：
+
+计算作业完成时间时，要注意CPU与设备、设备与设备之间是可以并行的。
+
+#### 系统吞吐量
+- 含义：单位时间内CPU完成作业数量
+- 影响因素
+  - 长作业消耗较长CPU时间，降低吞吐量
+  - 短作业消耗较短CPU时间，提高吞吐量
+  - 调度算法和方式会影响系统吞吐量
+
+#### 周转时间
+- 定义：从作业提交到完成的时间总和
+- 组成部分
+  - 作业等待时间
+  - 就绪队列排队时间
+  - CPU运行时间
+  - I/O操作时间
+- 计算方法
+  - 周转时间 = 作业完成时间-作业提交时间
+  - 平均周转时间 = (作业1的周转时间+..+作业n的周转时间)/n
+  - 带权周转时间 = 作业周转时间/作业实际运行时间
+  - 平均带权周转时间 = (作业1的带权周转时间+...+作业n的带权周转时间)/n
+
+#### 等待时间
+- 定义：进程等待CPU的时间总和
+- 特点
+  - 等待时间越长，用户满意度越低
+  - CPU调度算法不影响作业执行或I/O操作时间
+  - 只影响就绪队列等待时间
+- 作用：常用于简单评价调度算法优劣
+
+#### 响应时间
+- 定义：从用户提交请求到系统首次响应的时间
+- 应用场景
+  - 交互式系统中的重要评价准则
+  - 比周转时间更适合作为评价标准
+- 优化目标
+  - 尽量降低响应时间
+  - 使响应时间在用户可接受范围内
+
+#### 调度程序设计考虑因素
+- 用户需求
+  - 满足特定系统用户要求
+  - 如实时和交互进程的快速响应
+- 系统效率
+  - 考虑系统整体效率
+  - 减少进程平均周转时间
+- 算法开销
+  - 需权衡调度算法的实现成本
+
+</ul>
 
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
