--- a/re_knowledge/进程 线程/同步与互斥/互斥锁 信号量 经典同步q/互斥锁.md
+++ b/re_knowledge/进程 线程/同步与互斥/互斥锁 信号量 经典同步q/互斥锁.md
@@ -1,6 +1,29 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+### 互斥锁
 
+<ul>
+
+- 基本概念：
+  - 最简单的临界区解决工具
+  - 使用acquire()获得锁
+  - 使用release()释放锁
+  - 通过布尔变量available表示锁可用性
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/6ca1d9e89f710eed2244894c9e3ddcf6cf093b3086a42dd982c28bcf739ad6f6.jpg)
+
+#### 自旋锁
+- 特点：
+  - acquire()和release()必须是原子操作
+  - 通常采用硬件机制实现
+  - 主要缺点是忙等待
+  - 适用于多处理器系统
+  - 无上下文切换
+  - 短时间等待代价较低
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
