--- a/re_knowledge/进程 线程/同步与互斥/概念.md
+++ b/re_knowledge/进程 线程/同步与互斥/概念.md
@@ -1,6 +1,116 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+在学习本节时，请读者思考以下问题：
 
+1）为什么要引入进程同步的概念？
+
+2）不同的进程之间会存在什么关系？
+
+3）当单纯用本节介绍的方法解决这些问题时会遇到什么新的问题吗？
+
+用PV操作解决进程之间的同步互斥问题是这一节的重点，统考中频繁考查这一内容，请读者务必多加练习，掌握好求解该类问题的方法。
+
+## 基本概念
+
+<ul>
+
+### 引入进程同步的原因
+- 多道程序环境下，进程并发执行存在相互制约关系
+- 需要协调这些制约关系，因此引入进程同步概念
+- 示例：计算 $1+2\times3$
+  - 系统产生两个进程：加法进程和乘法进程
+  - 加法必须在乘法之后执行才能得到正确结果
+  - 由于系统异步性，需要特定机制约束加法进程
+
+### 临界资源相关概念
+
+<ul>
+
+#### 临界资源定义
+
+<ul>
+
+> pro：给定代码的同步互斥分析（2016、2021、2023）
+
+- 一次仅允许一个进程使用的资源
+- 包括：
+  - 物理设备（如打印机）
+  - 变量、数据等共享资源
+
+</ul>
+
+#### 临界区概念
+
+<ul>
+
+> pro：临界区和临界资源的分析（2024）
+
+- 定义：进程中访问临界资源的代码段
+- 临界资源访问过程分为四个部分：
+  - 进入区
+    - 检查是否可进入临界区
+    - 设置访问标志阻止其他进程进入
+  - 临界区：访问临界资源的代码段
+  - 退出区：清除访问标志
+  - 剩余区：其余代码部分
+
+```
+while(true){
+    entry section;    //进入区
+    critical section; //临界区
+    exit section;     //退出区
+    remainder section;//剩余区
+}
+```
+
+</ul>
+
+</ul>
+
+### 进程间关系
+
+<ul>
+
+#### 同步关系
+- 定义：直接制约关系
+- 特点：
+  - 涉及两个或多个进程间的协调
+  - 为完成特定任务而建立
+  - 包含等待和信息传递
+- 示例：
+  - 输入进程A和进程B通过单缓冲区交互
+  - 缓冲区空时B阻塞，A输入后B唤醒
+  - 缓冲区满时A阻塞，B取走数据后A唤醒
+
+#### 互斥关系
+- 定义：间接制约关系
+- 特点：
+  - 一个进程使用临界资源时其他进程等待
+  - 使用完毕后其他进程才能访问
+- 示例：
+  - 系统单一打印机被进程B占用
+  - 进程A需要打印时必须阻塞等待
+  - B释放后A被唤醒转为就绪态
+
+#### 临界区互斥准则
+
+<ul>
+
+> pro：实现临界区互斥必须遵循的准则（2020）
+
+- 空闲让进：临界区空闲时允许请求进程立即进入
+- 忙则等待：有进程在临界区时其他进程必须等待
+- 有限等待：保证请求进程能在有限时间内进入
+- 让权等待：
+  - 不能进入时应立即释放处理器
+  - 防止进程忙等待
+  - 原则上应遵循但非必须
+
+</ul>
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
