--- a/re_knowledge/进程 线程/死锁/operation/检测和解除.md
+++ b/re_knowledge/进程 线程/死锁/operation/检测和解除.md
@@ -1,6 +1,92 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 死锁检测和解除
 
+<ul>
+
+pro：死锁避免和死锁检测的区分（2015）
+
+前面介绍的死锁预防和避免算法，都是在为进程分配资源时施加限制条件或进行检测，若系统为进程分配资源时不采取任何预防或避免措施，则应该提供死锁检测和解除的手段。
+
+### 死锁检测
+
+<ul>
+
+> pro：死锁避免和死锁检测对比（2015）
+
+#### 死锁避免和检测的区别
+- 死锁避免:
+  - 需要在进程运行过程中持续保证不会出现死锁
+  - 需要知道进程从开始到结束的所有资源请求
+- 死锁检测:
+  - 只检测某个时刻是否发生死锁
+  - 只需知道对应时刻的资源请求
+
+> pro：多在资源竞争时发生死锁的临界条件分析（2016、2021)
+
+#### 资源分配图检测
+- 图形表示方法:
+  - 圆圈表示进程
+  - 框表示资源类型
+  - 框中圆表示单个资源
+  - 有向边分类:
+    - 请求边:进程到资源
+    - 分配边:资源到进程
+
+- 示例说明:
+  - P1进程:
+    - 已分配两个R1资源
+    - 请求一个R2资源
+  - P2进程:
+    - 已分配一个R1和一个R2资源
+    - 请求一个R1资源
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/77b5c15fac24c0dd51fd809180026878402240b17f0e37a3fc36084e15d76733.jpg)
+
+#### 简化资源分配图方法
+- 步骤1:
+  - 找出非阻塞非孤立进程
+  - 消除其请求边和分配边
+  - 使其成为孤立节点
+- 步骤2:
+  - 释放资源可能唤醒阻塞进程
+  - 重复步骤1的简化过程
+- 死锁判定:
+  - 图不可完全简化则存在死锁
+
+</ul>
+
+### 死锁解除
+
+<ul>
+
+> pro：解除死锁的方式（2019）
+
+#### 主要解除方法
+- 资源剥夺法:
+  - 挂起部分死锁进程
+  - 抢占其资源分配给其他进程
+  - 注意防止进程长期资源匮乏
+
+> attention：
+
+在资源分配图中，用死锁定理化简后，还有边相连的那些进程就是死锁进程。
+
+- 撤销进程法:
+  - 强制撤销部分或全部死锁进程
+  - 按进程优先级和代价选择撤销对象
+  - 实现简单但代价可能较大
+
+- 进程回退法:
+  - 让死锁进程回退避免死锁
+  - 进程自愿释放资源
+  - 要求系统:
+    - 保持进程历史信息
+    - 设置还原点
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
