--- a/re_knowledge/进程 线程/进程 & 线程/concept 组成 状态与转换/概念和特征.md
+++ b/re_knowledge/进程 线程/进程 & 线程/concept 组成 状态与转换/概念和特征.md
@@ -1,6 +1,73 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+<ul>
 
+在学习本节时，请读者思考以下问题：  
+1）为什么要引入进程？2）什么是进程？进程由什么组成？
+
+3）进程是如何解决问题的？
+
+希望读者带着上述问题去学习本节内容，并在学习的过程中多思考，从而更深入地理解本节内容。进程本身是一个比较抽象的概念，它不是实物，看不见、摸不看，初学者在理解进程概念时存在一定困难，在介绍完进程的相关知识后，我们会用比较直观的例子帮助大家理解。
+
+## 概念和特征
+
+<ul>
+
+### 进程的概念
+
+<ul>
+
+#### 进程的引入背景
+- 多道程序环境下的特点：
+  - 程序失去封闭性
+  - 具有间断性
+  - 具有不可再现性特征
+- 引入进程的目的：
+  - 更好地描述和控制程序的并发执行
+  - 实现操作系统的并发性和共享性
+
+#### 进程实体的组成
+- 程序段
+- 相关数据段
+- PCB（进程控制块）
+  - 创建进程即创建PCB
+  - 撤销进程即撤销PCB
+
+#### 进程的定义
+- 典型定义：
+  - 进程是一个正在执行程序的实例
+  - 进程是程序及数据从磁盘加载到内存后在CPU上的执行过程
+  - 进程是程序在数据集合上运行的过程
+- 传统操作系统定义：
+  - 进程是进程实体的运行过程
+  - 是系统进行资源分配和调度的独立单位
+
+</ul>
+
+### 进程的特征
+
+<ul>
+
+#### 基本特征
+- 动态性：
+  - 有创建、活动、暂停、终止等过程
+  - 具有生命周期
+  - 是动态产生、变化和消亡的
+- 并发性：
+  - 多个进程同存于内存
+  - 能在一段时间内同时运行
+- 独立性：
+  - 能独立运行
+  - 能独立获得资源
+  - 能独立接受调度
+- 异步性：
+  - 进程按各自独立的速度推进
+  - 导致执行结果不可再现
+  - 需要进程同步机制
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
