--- a/re_knowledge/进程 线程/进程 & 线程/concept 组成 状态与转换/状态与转换.md
+++ b/re_knowledge/进程 线程/进程 & 线程/concept 组成 状态与转换/状态与转换.md
@@ -1,5 +1,80 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 进程的状态与转换
+
+<ul>
+
+### 五种基本状态
+
+<ul>
+
+#### 运行态
+- 进程正在CPU上运行
+- 单CPU系统同时只有一个进程处于运行态
+
+#### 就绪态
+- 获得除CPU外的所有资源
+- 等待CPU分配
+- 组织为就绪队列
+
+> pro：执行中断处理程序时进程的状态（2023）
+
+#### 阻塞态
+- 等待某事件或资源
+- 即使CPU空闲也不能运行
+- 可能有多个阻塞队列
+
+#### 创建态
+- 进程正在被创建
+- 尚未转到就绪态
+- 创建步骤：
+  - 申请空白PCB
+  - 填写控制信息
+  - 分配必要资源
+  - 转入就绪态
+
+#### 终止态
+- 进程正从系统中消失
+- 可能原因：
+  - 正常结束
+  - 其他原因退出
+
+</ul>
+
+### 状态转换
+
+<ul>
+
+> pro：引起进程状态转换的事件（2014、2015、2018、2023）
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/2796d43857bddecd8eca8a18aecf8570c278e84dba5e8cfb5c23a1843cc5dc7b.jpg)
+
+#### 基本状态间的转换
+
+<ul>
+
+##### 就绪态→运行态
+- 被调度获得CPU资源
+- 分派CPU时间片
+
+##### 运行态→就绪态
+- 时间片用完
+- 更高优先级进程就绪
+
+##### 运行态→阻塞态
+- 请求资源使用
+- 等待事件发生
+
+##### 阻塞态→就绪态
+- 等待事件到来
+- I/O操作完成
+- 中断结束
+
+</ul>
+
+</ul>
+
+</ul>
 
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
