--- a/re_knowledge/进程 线程/进程 & 线程/concept 组成 状态与转换/组成.md
+++ b/re_knowledge/进程 线程/进程 & 线程/concept 组成 状态与转换/组成.md
@@ -1,6 +1,67 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 组成
 
+<ul>
+
+### 进程控制块
+
+<ul>
+
+#### PCB的基本概念
+- 创建时机：进程创建时
+- 存在特点：常驻内存
+- 重要性：是进程存在的唯一标志
+
+#### PCB的作用
+- 进程执行时的作用
+- 进程调度时的作用
+- 进程同步通信时的作用
+- 进程暂停时的作用
+
+#### PCB的内容
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/40c9fe37acec0dc1358828cc24c82b9fbaff9508f1d593f7c1605e5a6ae8ff94.jpg)
+
+<ul>
+
+##### 进程描述信息
+- 进程标识符
+- 用户标识符
+
+##### 进程控制和管理信息
+- 进程当前状态
+- 进程优先级
+
+##### 资源分配清单
+- 内存地址空间信息
+- 打开文件列表
+- I/O设备信息
+
+##### 处理机相关信息
+- CPU上下文
+- 寄存器值
+
+</ul>
+
+#### PCB的组织方式
+- 链接方式：
+  - 同状态PCB链接成队列
+  - 可根据阻塞原因分多队列
+- 索引方式：
+  - 同状态进程组织在索引表中
+  - 不同状态对应不同索引表
+
+</ul>
+
+### 程序段
+- 能被进程调度程序调度到CPU执行的代码段
+- 可被多个进程共享
+
+### 数据段
+- 程序加工处理的原始数据
+- 程序执行时的中间或最终结果
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
