--- a/re_knowledge/IO/concept/equipment 控制/控制方式.md
+++ b/re_knowledge/IO/concept/equipment 控制/控制方式.md
@@ -1,6 +1,250 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+### I/O控制方式
 
+<ul>
+
+- I/O控制的目的：
+  - 控制设备和主机之间的数据传送。
+
+- I/O控制方式的发展宗旨：
+  - 尽量减少CPU对I/O控制的干预。
+  - 解脱CPU从繁杂的I/O控制事务中。
+  - 使CPU能更多执行运算任务。
+
+控制方式共有4种：
+
+#### 程序直接控制方式
+
+<ul>
+
+* CPU对I/O设备的控制采取轮询的I/O方式，also called as程序轮询方式
+* 工作过程：
+  * CPU向设备控制器发出一条1O指令，启动从I/O设备读取一个字（节）
+  * 不断地循环测试设备状态（称为轮询）
+  * 直到确定该字（节）已在设备控制器的数据寄存器中
+  * CPU将数据寄存器中的数据取出，送入内存的指定单元
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/75abe47fb068f8bc618d23ce5403594c090e71aa91de763369678b2e38aaa339.jpg)\
+图5.3I/O控制方式的操作流程
+
+* 缺点：
+  * CPU的绝大部分时间都处于等待I/O设备状态的循环测试中
+  * CPU和I/O设备只能事行工作
+  * 由于CPU和I/O设备的速度差异很大，导致CPU的利用率相当低
+  * CPU之所以要不断地测试I/O设备的状态，是因为在CPU中未采用中断机构
+
+</ul>
+
+#### 中断驱动方式
+
+<ul>
+
+##### 基本思想
+
+<ul>
+
+* 允许I/O设备主动打断CPU的运行并请求服务，从而"解放"CPU
+* CPU向设备控制器发出一条I/O指令后can继续做其他有用的工作
+
+</ul>
+
+##### 工作过程
+
+<ul>
+
+###### 设备控制器角度
+
+<ul>
+
+* 从CPU接收读命令，然后从设备读数据
+* 数据读入设备控制器的数据寄存器后：
+  * 通过控制线给CPU发出中断信号
+  * 等待CPU请求该数据
+  * 收到CPU发出的取数据请求后
+  * 将数据放到数据总线上，传到CPU的寄存器中
+
+> pro：中断处理程序执行时请求进程的状态（2017、2023）
+
+> pro：键盘接收数据的中断过程分析（2010、2024）
+
+</ul>
+
+###### CPU角度
+
+<ul>
+
+* 当前运行进程发出读命令：
+  * 进程被阻塞
+  * 保存进程上下文
+  * 转去执行其他程序
+* 检查中断信号：
+  * 在每个指令周期末尾检查
+  * 有中断时：
+    * 保存当前运行进程上下文
+    * 执行中断处理程序
+    * 从设备控制器读数据到寄存器并存入主存
+    * 解除发出I/O命令的进程的阻塞状态
+    * 恢复进程上下文
+    * 继续运行
+
+</ul>
+
+</ul>
+
+##### 优缺点
+
+<ul>
+
+* 优点：
+  * 不需要轮询
+  * CPU和设备并行工作
+  * CPU利用率提升
+* 缺点：
+  * 数据交换必须经过CPU寄存器
+  * CPU以字（节）为单位进行干预，对块设备I/O操作效率低
+
+</ul>
+
+</ul>
+
+#### DMA方式
+
+<ul>
+
+##### 基本思想
+
+<ul>
+
+* 在I/O设备和内存之间开辟直接的数据交换通路，彻底"解放"CPU
+
+</ul>
+
+##### 特点
+
+<ul>
+
+* 基本传送单位是数据块，而不再是字（节）
+* 数据直接在设备和内存间传送，不经过CPU
+* 仅在传送数据块的开始和结束时需要CPU干预
+
+</ul>
+
+##### 组成
+
+<ul>
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/85a7e7036a0fcb4d7c5d51e75521bf08aa23e0583e84e1bea877320f5e79b378.jpg)\
+图5.4DMA控制器的组成
+
+* DMA控制器寄存器：
+  * 命令/状态寄存器（CR）：接收CPU命令和控制信息
+  * 内存地址寄存器（MAR）：存放数据传送的内存地址
+  * 数据寄存器（DR）：暂存传送数据
+  * 数据计数器（DC）：存放要传送的字节数
+
+> pro：DMA方式的工作流程（2017）
+
+</ul>
+
+##### 工作过程
+
+<ul>
+
+* CPU接收到设备的DMA请求：
+  * 向DMA控制器发出命令
+  * 设置MAR和DC初值
+  * 启动DMA控制器
+  * 继续其他工作
+* DMA控制器负责数据传送：
+  * 直接与内存交互
+  * 每次传送一个字
+  * 传送结束后向CPU发送中断信号
+
+</ul>
+
+##### 优点
+
+<ul>
+
+* 数据传输以"块"为单位，CPU介入频率低
+* 数据传送不经过CPU寄存器
+* CPU和设备并行操作程度提升
+
+</ul>
+
+</ul>
+
+#### 通道控制方式
+
+<ul>
+
+##### 基本特点
+
+<ul>
+
+* 通道是特殊的处理机，可执行通道指令
+* CPU只需发送一条I/O指令指明：
+  * 通道程序在内存中的位置
+  * 要访问的I/O设备
+* 实现CPU、通道和I/O设备三者并行工作
+
+</ul>
+
+##### 与其他方式的区别
+
+<ul>
+
+###### 与一般处理机的区别
+
+<ul>
+
+* 通道指令类型单一
+* 没有自己的内存
+* 与CPU共享内存
+
+</ul>
+
+###### 与DMA方式的区别
+
+<ul>
+
+* 控制方式：
+  * DMA需要CPU控制传输细节
+  * 通道由通道自身控制
+* 设备控制：
+  * DMA一个控制器对应一台设备
+  * 一个通道可控制多台设备
+
+</ul>
+
+</ul>
+
+##### 四种方式的比喻
+
+<ul>
+
+* 程序控制方式：
+  * 客户需定期查看进度
+  * 浪费客户时间
+* 中断方式：
+  * 裁缝完成一件就通知
+  * 仍需频繁往返
+* DMA方式：
+  * 雇用单线秘书
+  * 按固定规则处理
+  * 定期向客户报告
+* 通道方式：
+  * 秘书拥有更高自主权
+  * 可自行决策存放位置
+  * 可灵活安排报告时间
+  * 可同时与多个裁缝沟通
+
+</ul>
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
