--- a/re_knowledge/IO/concept/equipment 控制/设备.md
+++ b/re_knowledge/IO/concept/equipment 控制/设备.md
@@ -1,6 +1,258 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+### I/O设备
 
+<ul>
+
+- I/O设备管理的特点：
+  - 操作系统设计中最为凌乱的部分。
+  - 具有挑战性。
+
+- I/O设备管理的复杂性原因：
+  - 包含多个领域的不同设备。
+  - 包含与设备相关的应用程序。
+  - 很难有通用且一致的设计方案。
+
+#### 设备的分类
+
+<ul>
+
+- I/O设备定义：
+  - 能够将数据输入计算机的外部设备。
+  - 能够接收计算机输出数据的外部设备。
+
+- I/O设备的分类：
+
+  ##### 按信息交换的单位分类：
+  <ul>
+  1. 块设备：
+     - 信息交换以数据块为单位。
+     - 例如：磁盘、磁带。
+     - 特征：传输速率较高，可寻址。
+  
+  2. 字符设备：
+     - 信息交换以字符为单位。
+     - 例如：交互式终端机、打印机。
+     - 特征：传输速率低，不可寻址，常采用中断I/O方式。
+  </ul>
+
+  ##### 按设备的传输速率分类：
+  <ul>
+  1. 低速设备：
+     - 传输速率：每秒几字节至数百字节。
+     - 例如：键盘、鼠标。
+
+  2. 中速设备：
+     - 传输速率：每秒数千字节至数万字节。
+     - 例如：激光打印机。
+
+  3. 高速设备：
+     - 传输速率：数百千字节至千兆字节。
+     - 例如：磁盘机、光盘机。
+  </ul>
+
+  ##### 按设备的使用特性分类：
+  <ul>
+  1. 存储设备：
+     - 用于存储信息。
+     - 例如：磁盘、磁带、光盘。
+
+  2. 输入/输出设备：
+     - 输入设备：向计算机输入信息。
+       - 例如：键盘、鼠标、扫描仪。
+     - 输出设备：输出数据信息。
+       - 例如：打印机。
+     - 交互式设备：集成输入和输出功能。
+       - 例如：触控显示器。
+  </ul>
+
+  ##### 按设备的共享属性分类：
+  <ul>
+  1. 独占设备：
+     - 同一时刻只能由一个进程占用。
+     - 低速设备通常是独占设备。
+     - 例如：打印机。
+
+  2. 共享设备：
+     - 允许多个进程同时访问。
+     - 通过分时共享使用。
+     - 例如：磁盘。
+
+  3. 虚拟设备：
+     - 通过SPOOLing技术将独占设备变为共享设备。
+     - 一个物理设备变为多个逻辑设备。
+     - 允许多个进程同时分配使用。
+  </ul>
+
+</ul>
+
+#### I/O接口（设备控制器）
+
+<ul>
+
+- I/O接口的定义：
+  - 也称为设备控制器。
+  - CPU与设备之间的接口。
+  - 实现设备和计算机之间的数据交换。
+
+- I/O接口的功能：
+  - 接收CPU发出的命令。
+  - 控制设备工作。
+  - 使CPU从繁杂的设备控制事务中解脱出来。
+
+**组成**
+
+**设备控制器**主要由三部分组成:
+
+- ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/e49971ea86446d27951fba8407efff766807b5cfb5b3209d1a23bdaa982a458a.jpg)\
+图5.1设备控制器的组成
+
+**1）\~与CPU的接口**
+
+- CPU与设备控制器通信接口：
+  - 实现CPU与设备控制器之间的通信。
+
+- 接口信号线分类：
+  - 数据线：
+    - 传输读/写数据。
+    - 传输控制信息。
+    - 传输状态信息。
+  - 地址线：
+    - 用于访问I/O接口中的寄存器编号。
+  - 控制线：
+    - 传输读/写等控制信号。
+
+**2）\~与设备的接口**
+
+- 设备控制器的连接能力：
+  - 一个设备控制器可以连接一个或多个设备。
+  - 因此，控制器中有一个或多个设备接口。
+
+- 设备接口的信号传输：
+  - 每个接口都可以传输三种类型的信号：
+    - 数据信号。
+    - 控制信号。
+    - 状态信号。
+
+**3）I/O逻辑**
+
+用于实现对设备的控制
+
+它通过一组控制线与CPU交互，对从CPU收到的I/O命令进行**译码**。
+
+CPU启动设备时：
+
+* 将启动命令发送给控制器
+* 同时通过地址线将地址发送给控制器
+  * 由控制器的I/O逻辑对地址进行译码
+  * 并对所选设备进行控制
+
+**主要功能：**
+
+① 接收和识别命令
+
+* 如磁盘控制器能接收CPU发来的读、写、查找等命令
+
+② 数据交换
+
+* 包括CPU和控制器之间的数据传输，以及控制器和设备之间的数据传输；
+
+③标识和报告设备的状态，以供CPU处理； 
+④ 地址识别； 数据缓冲； 差错控制。
+
+</ul>
+
+#### I/O接口的类型
+
+<ul>
+
+从不同的角度看，I/O接口can分为不同的类型：
+
+1）按数据传送方式（外设和接口一侧）
+
+* 并行接口（一个字节or者一个字的所有位同时传送）
+* 串行接口（一位一位地有序传送）
+
+接口要完成数据格式的转换。
+
+2）按主机访问IO设备的控制方式
+
+* 程序查询接口、中断接口和DMA接口等
+
+3）按功能选择的灵活性
+
+* 可编程接口（通过编程改变接口功能）
+* 不可编程接口
+
+</ul>
+
+#### I/O端口
+
+<ul>
+
+I/O端口：设备控制器中 可被CPU直接访问的寄存器
+
+主要有以下三类寄存器：
+
+* 数据寄存器：
+  * 用于缓存 从设备送来的_输入_数据 or 从CPU送来的_输出_数据
+* 状态寄存器：
+  * 保存设备的执行结果or状态信息，以供CPU读取
+* 控制寄存器：
+  * 由CPU写入，以便启动命令or更改设备模式
+
+I/O端口要想can被CPU访问，就要对各个端口进行编址，every端口对应一个端口地址。
+
+而对I/O端口的编址方式have与存储器_独立编址_和_统一编址_两种:
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/401d00c9d063a104c8f5367dac6c8fba58fe2fab6e01df0ba55a3358f01f1d49.jpg)\
+图5.2独立编址I/O和内存映射I/O
+
+**（1）独立编址**
+
+独立编址是指为every端口分配一个I/O端口号
+
+I/O端口的_地址_空间与_主存_地址空间是两个独立的地址空间
+
+* their范围can重叠
+  * 相同地址可能属于不同的地址空间
+* 普通用户程序不能对端口进行访问
+* only操作系统使用特殊的I/O指令才能访问端口
+
+优点：
+
+* I/O端口数比主存单元少得多，只需少量地址线，makes I/O端口译码**简单**，寻址速度更**快**
+* 使用专用I/O指令，可使程序更加**清晰**，便于理解和检查
+
+缺点：
+
+* I/O指令少，只提供简单的传输操作，所以程序设计的**灵活性**较**差**
+* 此外，CPU需要提供两组独立的存储器和设备的读/写控制信号，增加了_控制_ 的**复杂**性
+
+**（2）统一编址**
+
+> also called as**内存映射**I/O
+
+* 将**主存**地址空间 _分出_ 一部分给I/O端口进行编址
+  * I/O端口和主存单元在同一地址空间的不同分段中
+    * according to地址范围，can区分访向的是 17O端口or主存单元
+  * thus无须设置专门的O指令，用统一的访存指令就可访问I/O端口
+
+优点：
+
+* 不需要专门的I/O指令，makes CPU访问I/O的操作更加灵活和方便
+  * 端口有较**大**的**编址**空间
+* I/O访问的**保护机制**可由虚拟存储管理系统来实现，**无须专门**设置
+
+缺点：
+
+* 端口地址**占用**了部分**主存**地址空间 → 主存的可用容量变小
+* 由于 在识别I/O端口时全部地址线 都需 参加译码
+  * makes 译码电路更**复杂**，**降低**了寻址**速度**
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
