--- a/re_knowledge/IO/磁盘&固态/磁盘 管理/磁盘.md
+++ b/re_knowledge/IO/磁盘&固态/磁盘 管理/磁盘.md
@@ -1,6 +1,94 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+<ul>
 
+在学习本节时，请读者思考以下问题：
+
+1）在磁盘上进行一次读/写操作需要哪几部分时间？其中哪部分时间最长？
+
+2）存储一个文件时，当一个磁道存储不下时，剩下的部分是存在同一个盘面的不同磁道好，还是存在同一个柱面上的不同盘面好？
+
+本节主要介绍磁盘管理的方式。学习本节时，要重点掌握计算一次磁盘操作的时间，以及对于给定访盘的磁道序列，按照特定算法求出磁头通过的总磁道数及平均寻道数。
+
+### 磁盘
+
+<ul>
+
+#### 磁盘的物理结构
+
+<ul>
+
+> **pro：磁盘容量的计算（2019）**
+
+- 基本组成
+  - 磁盘是表面涂有磁性物质的物理盘片
+  - 通过磁头（导体线圈）从磁盘存取数据
+  - 读/写操作时磁头固定，磁盘高速旋转
+
+- 数据组织方式
+  - 磁道：同心圆形式
+    - 每个磁道与磁头一样宽
+    - 一个盘面有上千个磁道
+  - 扇区：磁道的划分
+    - 每个扇区固定存储大小（如1KB）
+    - 一个扇区称为一个盘块
+  - 间隙：相邻磁道及扇区间的分隔，避免精度错误
+
+> **attention:**
+
+##### 现代磁盘分区特点
+
+<ul>
+
+- 不再将内外磁道划分为相同数目的扇区
+- 将盘面划分为若干环带
+  - 同一环带内的所有磁道具有相同的扇区数
+  - 外层环带的磁道拥有较内层环带的磁道更多的扇区
+
+</ul>
+
+</ul>
+
+#### 磁盘驱动器结构
+
+<ul>
+
+> **pro：将簇号转化为磁盘物理地址的过程（2019）**
+
+- 基本组件
+  - 磁头臂
+  - 用于旋转磁盘的转轴
+  - 用于数据输入/输出的电子设备
+
+- 磁盘组织结构
+  - 多个盘片垂直堆叠组成磁盘组
+  - 每个盘面对应一个磁头
+  - 所有磁头固定在一起，只能"共进退"
+  - 柱面：所有盘片上相对位置相同的磁道组合
+
+- 寻址特点
+  - 最小寻址单位：扇区
+  - 磁盘地址表示：柱面号·盘面号·扇区号
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/d4e0d181abdea47ec7802f4dd8f7c52b20cd866783db066ce1b13bf46bcb3fdc.jpg)
+
+</ul>
+
+#### 磁盘分类
+
+<ul>
+
+- 按磁头移动方式
+  - 固定头磁盘：磁头相对盘片径向固定
+  - 活动头磁盘：磁头可移动
+
+- 按盘片固定方式
+  - 固定盘磁盘：盘片永久固定
+  - 可换盘磁盘：盘片可移动和替换
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
