--- a/re_knowledge/IO/设备独立性软件/缓存 分配/设备分配与回收.md
+++ b/re_knowledge/IO/设备独立性软件/缓存 分配/设备分配与回收.md
@@ -1,6 +1,199 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+### 设备分配与回收
 
+<ul>
+
+#### 设备分配概述
+
+<ul>
+
+- 设备分配是指according to用户的I/O请求分配所需的设备
+- 分配总原则
+  - 充分发挥设备的使用效率
+  - 尽可能让设备忙碌
+  - 避免不合理分配造成进程死锁
+
+</ul>
+
+#### 设备分配的数据结构
+
+<ul>
+
+##### 主要数据结构
+
+<ul>
+
+1. 设备控制表（DCT)
+- 系统为every设备配置一张DCT
+- 表项包含设备属性：
+  - 设备类型（打印机、扫描仪、键盘等）
+  - 设备标识符（物理设备名，唯一）
+  - 设备状态（忙/闲）
+  - 指向控制器表的指针
+  - 重复执行次数or时间
+  - 设备队列的队首指针
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/50bedf2c692be2ca6907ed975af28b99ad7a4d421d1db2be4ea6d0b52bb3bb8d.jpg)
+
+> **attention:**
+当某个进程释放某个设备，且无其他进程请求该设备时，系统将该设备DCT中的设备状态改为空闲，即可实现"设备回收"。
+
+2. 控制器控制表（COCT)
+- every设备控制器对应一张COCT
+- 用于操作系统对控制器的操作和管理
+- 通过指针连接相应通道信息
+
+3. 通道控制表（CHCT)
+- every通道对应一张CHCT
+- 用于操作系统对通道的操作和管理
+- 可管理多个控制器
+
+4. 系统设备表（SDT)
+- 整个系统只有一张SDT
+- 记录所有物理设备情况
+- every物理设备对应一个表目
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/60e89f67bc7c7e8d39295151c52c1a642494ef3f346209255067309200fbe0e1.jpg)
+
+</ul>
+
+</ul>
+
+#### 设备分配时应考虑的因素
+
+<ul>
+
+> **pro：设备分配需要考虑的因素（2023）**
+
+##### 设备的固有属性
+
+<ul>
+
+- 独占设备
+  - 分配给某进程后由其独占
+  - 直至进程完成or释放
+- 共享设备
+  - 可同时分配给多个进程
+  - 需调度访问次序
+- 虚拟设备
+  - 属于可共享设备
+  - 可同时分配给多进程
+
+</ul>
+
+##### 设备分配算法
+
+<ul>
+
+- FCFS算法
+  - according to请求先后次序排队
+  - 优先分配给队首进程
+- 最高优先级优先算法
+  - 优先级高的进程排前面
+  - 同优先级按FCFS原则
+
+</ul>
+
+##### 设备分配中的安全性
+
+<ul>
+
+- 安全分配方式
+  - 进程发出I/O请求后进入阻塞态
+  - 直到I/O操作完成才唤醒
+  - 优点：设备分配安全
+  - 缺点：CPU和I/O设备串行工作
+- 不安全分配方式
+  - 发出I/O请求后继续运行
+  - 仅当设备被占用时才阻塞
+  - 优点：可同时操作多个设备，进程推进迅速
+  - 缺点：可能造成死锁
+
+</ul>
+
+</ul>
+
+#### 设备分配的步骤
+
+<ul>
+
+##### 独占设备分配过程
+
+<ul>
+
+- 分配设备
+  - 根据I/O请求中的物理设备名查找SDT
+  - 找出该设备的DCT
+  - 检查DCT中设备状态
+    - 若忙：将进程PCB挂到设备等待队列
+    - 若不忙：按策略分配给进程
+
+- 分配控制器
+  - 根据DCT找到COCT
+  - 查询控制器状态
+    - 若忙：将进程PCB挂到控制器等待队列
+    - 若不忙：分配给进程
+
+- 分配通道
+  - 根据COCT找到CHCT
+  - 查询通道状态
+    - 若忙：将进程PCB挂到通道等待队列
+    - 若不忙：分配给进程
+
+</ul>
+
+##### 设备独立性实现
+
+<ul>
+
+- 使用逻辑设备名代替物理设备名
+- 系统从SDT中查找该类设备
+  - 若第一个设备忙，查找第二个
+  - 仅当所有设备都忙时，进程才进入等待队列
+  - 只要有一个可用，即进行分配
+
+</ul>
+
+</ul>
+
+#### 逻辑设备名到物理设备名的映射
+
+<ul>
+
+> **pro：逻辑设备名和物理设备名的使用（2009）**
+
+##### 逻辑设备表结构
+
+<ul>
+
+- 每个表项包含三部分
+  - 逻辑设备名
+  - 物理设备名
+  - 设备驱动程序入口地址
+
+</ul>
+
+##### 逻辑设备表设置方式
+
+<ul>
+
+- 系统单表方式
+  - 整个系统只设一张LUT
+  - 所有进程共用
+  - 适用于单用户系统
+  - ![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/c85a2f6629c4e51d71b94f0e6cf8bff514037b67078eb643178cf87c356cb01b.jpg)
+
+- 用户独立表方式
+  - 每个用户设置独立LUT
+  - 可使用相同逻辑设备名
+  - 适用于多用户系统
+
+</ul>
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
