--- a/re_knowledge/concept/concept/特征.md
+++ b/re_knowledge/concept/concept/特征.md
@@ -1,6 +1,134 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 特征/基本特征 
 
+<ul>
+
+操作系统是一种**系统软件**，但与其他系统软件和应用软件有很大的不同，它有自己的特殊性即基本特征。
+  
+### 并发（Concurrence）  
+
+<ul>
+
+#### 定义
+- 两个或多个事件在同一时间间隔内发生
+
+#### 多道程序环境
+- 特点：
+  - 内存中同时装有若干道程序
+  - 利用程序I/O操作暂停时的CPU空档时间
+  - 调度另一道程序运行
+  - 实现多道程序交替运行
+  - 使CPU保持忙碌状态
+
+>pro：并行性的定义及分析（2009）  
+
+#### 并行性
+- 定义：在同一时刻能完成两种或两种以上的工作
+- 特征：同时进行运算或操作的特性
+
+#### 单处理机多道程序环境
+- 宏观：多道程序同时执行
+- 微观：程序分时交替执行
+- 实现方式：
+  - 并发通过分时实现
+  - CPU与I/O设备、I/O设备间可实现真正并行
+  - 进程并行需要硬件支持（多流水线或多处理机）
+
+>attention：同一时间间隔（并发）和同一时刻（并行）的区别
+
+#### 示例说明
+- eg：在9:00一9:10仅吃面包，在9:10一9:20仅写字，在9:20一9:30仅吃面包，在9:30一10:00仅写字，那么在9:00一10:00吃面包和写字这两种行为就是并发执行的：再如，如果你在9：00一10：00右手写字，左手同时拿着面包吃，那么这两个动作就是并行执行的。  
+
+#### 进程引入目的
+- 使程序能并发执行
+
+</ul>
+
+### 共享（Sharing）  
+
+<ul>
+
+#### 定义
+- 系统资源可供内存中多个并发执行的进程共同使用
+- 分类：
+  - 互斥共享
+  - 同时访问
+
+#### 互斥共享方式  
+##### 特点
+- 一段时间内只允许一个进程访问资源
+- 适用资源：
+  - 打印机
+  - 磁带机
+  - 栈
+  - 变量
+  - 表格
+
+##### 访问流程
+- 进程提出请求
+- 系统检查资源状态
+- 资源分配与使用
+- 其他进程等待
+- 资源释放后允许其他进程访问
+
+#### 同时访问方式  
+##### 特点
+- 允许多个进程"同时"访问
+- 宏观同时，微观交替
+- 适用资源：
+  - 磁盘设备
+  - 重入代码编写的文件
+
+#### 并发与共享关系
+- 互为存在条件：
+  - 资源共享以程序并发为条件
+  - 资源共享管理影响程序并发执行
+
+</ul>
+
+### 虚拟（Virtual)  
+
+<ul>
+
+#### 定义
+- 将物理实体变为逻辑对应物
+- 实现技术：
+  - 时分复用技术
+  - 空分复用技术
+
+#### 虚拟技术应用
+##### 虚拟处理器
+- 通过多道程序设计技术
+- 分时使用处理器
+- 为多用户提供服务
+
+##### 虚拟存储器
+- 扩充存储器逻辑容量
+- 提供用户感知的虚拟容量
+
+##### 虚拟设备
+- 物理I/O设备虚拟为多台逻辑设备
+- 实现临界资源的共享访问
+
+</ul>
+
+### 异步（A synchro n is m）  
+
+<ul>
+
+#### 特征
+- 多道程序并发执行
+- 进程执行非连续性
+- 推进速度不可预知
+
+#### 影响
+- 可能导致时间相关错误
+- 相同运行环境下需保证结果一致性
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
