--- a/re_knowledge/内存/concept/页 段/基本分页.md
+++ b/re_knowledge/内存/concept/页 段/基本分页.md
@@ -1,6 +1,419 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 基本分页存储管理
 
+<ul>
+
+- 固定分区和动态分区的问题：
+  - 固定分区产生内部碎片
+  - 动态分区产生外部碎片
+  - 两种技术内存利用率低
+
+- 分页思想的引入：
+  - 内存空间划分：
+    - 固定大小的分区（如4KB）
+    - 称为页框、页帧或物理块
+  - 进程逻辑地址空间：
+    - 划分为与块大小相等的区域
+    - 称为页或页面
+  - 分配方式：
+    - 以页框为单位分配内存空间
+
+- 与固定分区的比较：
+  - 相似点：形式上类似分区相等的固定分区
+  - 区别：
+    - 块大小相对分区小很多
+    - 进程按块划分和申请空间
+  - 碎片情况：
+    - 不产生外部碎片
+    - 仅在最后一块产生内部碎片
+    - 平均每个进程产生半个块大小的内部碎片
+
+### 分页存储的几个基本概念
+
+<ul>
+
+#### 页面和页面大小
+
+<ul>
+
+##### 页面编号
+
+<ul>
+
+- 页号：进程逻辑地址空间中页面编号，从0开始
+- 页框号：内存空间中页框编号，从0开始
+- 对应关系：页号和页框号一一对应
+
+</ul>
+
+##### 页面大小设计
+
+<ul>
+
+- 基本要求：应是2的整数次幂
+- 大小选择考虑：
+  - 过小问题：
+    - 页表过长占用大量内存
+    - 增加地址转换开销
+    - 降低页面换入/换出效率
+  - 过大问题：
+    - 页内碎片增多
+    - 降低内存利用率
+
+</ul>
+
+</ul>
+
+#### 地址结构
+
+<ul>
+
+>pro：分页系统的逻辑地址结构（2009、2010、2013、2015、2017）
+
+某个分页存储管理的逻辑地址结构如图3.7所示。
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/a1084600709c4d0aa005f5487fcbb33775ce656838a921c6a1ed9595caad2029.jpg)
+
+##### 地址组成
+
+<ul>
+
+- 两个部分：
+  - 页号P
+  - 页内偏移量W
+- 32位地址结构：
+  - 0~11位：页内地址，页大小为2^12B
+  - 12~31位：页号，最多2^20页
+
+</ul>
+
+##### 地址特点
+
+<ul>
+
+- 决定虚拟内存寻址空间大小
+- 数值表示：
+  - 可用十进制表示
+  - 可用二进制表示
+  - 需要会进行转换
+
+</ul>
+
+</ul>
+
+#### 页表
+
+<ul>
+
+##### 页表功能与结构
+
+<ul>
+
+- 建立目的：找到页面在内存中的位置
+- 组成特点：
+  - 每个进程一张页表
+  - 每个页面对应一个页表项
+  - 页表项包含页号和块号
+
+</ul>
+
+##### 页表作用
+
+<ul>
+
+- 实现地址映射：
+  - 从页号到物理块号的映射
+  - 通过查表找到内存中的物理块号
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/4e941d532664249c15e4c6bfa16b0d95e1d9e20f298489776e12659e46b93471.jpg)
+图3.8页表的作用
+
+</ul>
+
+</ul>
+
+</ul>
+
+### 基本地址变换机构  
+
+<ul>
+
+#### 地址变换机构概述
+
+<ul>
+
+- 主要任务：将逻辑地址转换为内存中的物理地址
+- 实现方式：借助页表完成
+- 基本结构：如图3.9所示
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/e6eee6e73f4f9cae62eb8d1c257f991c320374c1947ac8ac055ae2fa059e54d6.jpg)  
+图3.9分页存储管理系统中的地址变换机构  
+
+>attention:  
+
+在页表中，由于页表项连续存放，因此页号可以是隐含的，不占用存储空间。  
+
+</ul>
+
+#### 地址变换实现机制
+
+<ul>
+
+##### 页表寄存器设置
+
+<ul>
+
+- 目的：提高地址变换速度
+- 组成：
+  - 存放页表在内存的始址F
+  - 页表长度M
+- 使用特点：
+  - 单CPU系统只设一个页表寄存器
+  - 进程未执行时信息存在PCB中
+  - 进程调度执行时装入页表寄存器
+
+</ul>
+
+>pro：页式系统的地址变换过程（2013、2021、2024）  
+
+>pro：页表项地址的计算与分析（2024）  
+
+##### 地址变换步骤
+
+<ul>
+
+- 步骤1：计算页号和偏移量
+  - 页号P = A/L
+  - 页内偏移量W = A%L
+- 步骤2：页号越界检查
+  - 若P ≥ M则产生越界中断
+- 步骤3：查询页表
+  - 计算页表项地址 = F + P × 页表项长度
+  - 获取物理块号b
+- 步骤4：计算物理地址
+  - E = b×L + W
+  - 用E访问内存
+
+</ul>
+
+##### 地址变换示例
+
+<ul>
+
+- 条件：
+  - 页面大小L = 1KB
+  - 页号2对应物理块b = 8
+  - 逻辑地址A = 2500
+- 计算过程：
+  - P = 2500/1K = 2
+  - W = 2500%1K = 452
+  - E = 8×1024 + 452 = 8644
+
+</ul>
+
+</ul>
+
+#### 页表项大小设计
+
+<ul>
+
+##### 约束条件分析
+
+<ul>
+
+- 基本要求：能找到页面在内存中的位置
+- 计算示例：
+  - 32位地址空间
+  - 4KB页面大小
+  - 总页数：2^32B/4KB = 2^20页
+  - 所需位数：log₂2^20 = 20位
+  - 最小页表项：⌈20/8⌉ = 3B
+
+</ul>
+
+</ul>
+
+#### 分页管理主要问题
+
+<ul>
+
+- 访存效率问题：
+  - 每次访存需地址转换
+  - 转换速度要求高
+- 内存利用率问题：
+  - 每进程需维护页表
+  - 页表大小需合理控制
+
+</ul>
+
+</ul>
+
+### 具有快表的地址变换机构  
+
+<ul>
+
+#### 快表的引入背景
+
+<ul>
+
+- 传统页表访问过程需两次内存访问：
+  - 第一次访问页表获取物理地址
+  - 第二次根据物理地址访问数据/指令
+- 这种方法使指令执行速度降低一半
+
+</ul>
+
+#### 快表的基本概念
+
+<ul>
+
+- 在地址变换机构中增设高速缓冲存储器(快表/TLB)
+  - 具有并行查找能力
+  - 存放当前访问的若干页表项
+  - 加速地址变换过程
+- 主存中的页表称为慢表
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/849dd4ffb9bf9d8bec3027b62a29e5854c61e99bba2e66054afa6c2ee3a3787b.jpg)  
+图3.10具有快表的地址变换机构  
+
+>pro：具有快表的地址变换的性能分析（2009）  
+
+</ul>
+
+#### 快表地址变换过程
+
+<ul>
+
+- CPU给出逻辑地址后硬件进行地址转换
+- 将页号与快表中所有页号比较
+  - 找到匹配页号：
+    - 直接取出对应页框号
+    - 与页内偏移量拼接形成物理地址
+    - 仅需一次访存
+  - 未找到匹配页号：
+    - 需访问主存中页表
+    - 读出页表项并存入快表
+    - 若快表已满需按算法淘汰旧页表项
+
+</ul>
+
+#### 快表性能分析
+
+<ul>
+
+- 命中率可达90%以上
+- 分页速度损失降至10%以下
+- 有效性基于局部性原理
+
+</ul>
+
+</ul>
+
+### 两级页表  
+
+<ul>
+
+#### 引入背景
+
+<ul>
+
+- 单级页表存在问题：
+  - 以32位地址空间为例：
+    - 页面大小4KB
+    - 页表项大小4B
+    - 页内偏移12位
+    - 页号20位
+  - 导致：
+    - 页表项数达2^20
+    - 占用1K个页
+    - 要求连续存放
+
+>pro：多级页表的特点和优点（2014）  
+
+</ul>
+
+#### 解决方案
+
+<ul>
+
+- 方案一：离散分配方式
+  - 用索引表记录页表存放位置
+  - 解决连续内存空间问题
+- 方案二：部分页表调入
+  - 仅调入当前需要的页表项
+  - 其余页表项驻留磁盘
+  - 需要时再调入
+
+</ul>
+
+#### 两级页表结构
+
+<ul>
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/f3d711b1fdfd48bdfbf62078bf72f43ff15a97f9dc1f39225d1f0d21e9af6e3d.jpg)  
+
+>pro：两级页表的逻辑地址结构及相关分析（2010、2013、2015、2017一2019）  
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/e940ed14b9df9e0a88b9d4ed75eb1b22dcea777df08139307f5ba7513072ad6d.jpg)  
+图3.12两级页表结构示意图  
+
+</ul>
+
+#### 两级页表实现
+
+<ul>
+
+- 页表项内容：
+  - 存放进程页对应的物理块号
+  - 如：0号页存放在1号物理块
+- 外层页表项内容：
+  - 存放页表分页的始址
+  - 如：0号页表存放在3号物理块
+
+>pro：二级页表的页表基址寄存器中的内容（2018、2021）  
+
+>pro：二级页表中的地址变换过程（2015、2017）  
+
+</ul>
+
+#### 地址变换过程
+
+<ul>
+
+- 系统增设外层页表寄存器
+  - 用于存放页目录始址
+- 变换步骤：
+  - 用页目录号索引找到页表始址
+  - 用二级页号索引找到页表项
+  - 将物理块号和页内偏移拼接
+  - 用最终地址访问内存
+- 需要3次访存
+
+</ul>
+
+#### 多级页表的必要性
+
+<ul>
+
+- 64位地址空间的问题：
+  - 两级分页条件：
+    - 页面大小4KB
+    - 页表项大小4B
+  - 外层页表需求：
+    - 42位用于外层页号
+    - 4096G个页表项
+    - 需16384GB连续内存
+- 解决方案：
+  - 必须采用多级页表
+  - 对外层页表再次分页
+  - 目的是建立索引避免存储无用页表项
+
+</ul>
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
