--- a/re_knowledge/内存/concept/页 段/段页式.md
+++ b/re_knowledge/内存/concept/页 段/段页式.md
@@ -1,6 +1,110 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 段页式存储管理  
 
+<ul>
+
+### 基本概念
+
+<ul>
+
+- 结合了分页和分段的优点：
+  - 分页存储管理能有效地提高内存利用率
+  - 分段存储管理能反映程序的逻辑结构并有利于段的共享和保护
+
+</ul>
+
+### 存储空间划分
+
+<ul>
+
+- 进程地址空间划分：
+  - 首先分成若干逻辑段，每段都有自己的段号
+  - 然后将每段分成若干大小固定的页
+- 内存空间管理：
+  - 将内存分成若干和页面大小相同的存储块
+  - 以存储块为单位进行分配
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/a19e5e21015fab4e9f7957c838961ae0ac322f6956d3a3233be80e644f36ad9d.jpg)  
+图3.17段页式管理方式  
+
+</ul>
+
+### 地址结构
+
+<ul>
+
+- 逻辑地址包含三部分：
+  - 段号
+  - 页号
+  - 页内偏移量
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/faebce5e4781cefaab723928f127ba1a5e590b95ef32a8b81add22f95bf3fae7.jpg)  
+图3.18段页式系统的逻辑地址结构  
+
+</ul>
+
+### 地址变换实现
+
+<ul>
+
+#### 系统表结构
+
+<ul>
+
+- 段表：
+  - 每个进程一张段表
+  - 段表项包含：
+    - 段号
+    - 页表长度
+    - 页表始址
+- 页表：
+  - 每个段对应一张页表
+  - 页表项包含：
+    - 页号
+    - 块号
+- 段表寄存器：
+  - 指出进程的段表始址和段表长度
+  - 双重作用：
+    - 在段表中寻址
+    - 判断是否越界
+
+>attention:  
+
+在段页式存储管理中，每个进程的段表只有一个，而页表可能有多个。  
+
+</ul>
+
+#### 地址变换过程
+
+<ul>
+
+- 变换步骤：
+  - 首先通过段表查到页表始址
+  - 然后通过页表找到物理块号
+  - 最后形成物理地址
+- 访问特点：
+  - 一次访问需要三次访存
+  - 可使用快表加快查找速度
+    - 快表关键字：段号、页号
+    - 快表值：物理块号和保护码
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/902defa81b7d034667a22ba17e1c383d0b86ba3adf1f5b19cbcb5ea02917b42f.jpg)  
+图3.19段页式系统的地址变换机构  
+
+</ul>
+
+</ul>
+
+### 地址空间特征
+
+<ul>
+
+- 段页式管理的地址空间是二维的
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
