--- a/re_knowledge/进程 线程/CPU调度/概念.md
+++ b/re_knowledge/进程 线程/CPU调度/概念.md
@@ -1,5 +1,71 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+在学习本节时，请读者思考以下问题
+
+1）为什么要进行CPU调度？
+
+2）调度算法有哪几种？结合第1章学习的分时操作系统和实时操作系统，思考哪种调度算法比较适合这两种操作系统。
+
+希望读者能够在学习调度算法前，先自己思考一些调度算法，在学习的过程中注意将自己的想法与这些经典的算法进行比对，并学会计算一些调度算法的周转时间。
+
+## 调度的概念
+
+<ul>
+
+### 调度的基本概念
+- 在多道程序系统中，进程的数量往往多于CPU的个数，因此进程争用CPU的情况在所难免
+- CPU调度是对CPU进行分配，即从就绪队列中按照一定的算法（公平、高效的原则）选择一个进程并将CPU分配给它运行，以实现进程并发地执行
+- CPU调度是多道程序操作系统的基础，是操作系统设计的核心问题
+
+### 调度的层次
+
+<ul>
+
+![](https://cdn-mineru.openxlab.org.cn/model-mineru/prod/7f02ae01d0a171c46a1a035b0848db7cb0ff1cf0d5d243f56b408c781bf2bcb8.jpg)  
+图2.7CPU的三级调度
+
+#### 高级调度（作业调度）
+- 主要功能：
+  - 从外存上处于后备队列的作业中挑选作业
+  - 分配内存、I/O设备等必要资源
+  - 建立相应进程使其获得竞争CPU权利
+- 特点：
+  - 本质是内存与辅存之间的调度
+  - 每个作业只调入一次、调出一次
+  - 多道批处理系统中配有作业调度，其他系统通常不需要
+
+#### 中级调度（内存调度）
+- 目的：
+  - 提高内存利用率和系统吞吐量
+- 工作机制：
+  - 将暂时不能运行的进程调至外存等待（进入挂起态）
+  - 当具备运行条件且内存有空闲时重新调入内存
+  - 修改状态为就绪态，进入就绪队列等待
+- 本质：是存储器管理中的对换功能
+
+#### 低级调度（进程调度）
+- 基本功能：
+  - 按照算法从就绪队列中选取进程
+  - 将CPU分配给选中的进程
+- 特点：
+  - 是最基本的调度，各种操作系统必须配置
+  - 调度频率很高，一般几十毫秒一次
+
+#### 三级调度的联系
+- 工作流程关系：
+  - 作业调度选择作业进入内存并建立进程
+  - 这些进程进入就绪队列
+  - 进程调度从就绪队列选择进程运行
+  - 中级调度负责进程的挂起管理
+- 主要特点：
+  - 作业调度为进程活动做准备，进程调度使进程正常活动
+  - 中级调度位于作业调度和进程调度之间
+  - 调度频率：作业调度最少，中级调度略多，进程调度最高
+  - 进程调度最基本且不可或缺
+
+</ul>
+
+</ul>
 
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
