--- a/re_knowledge/进程 线程/死锁/operation/预防.md
+++ b/re_knowledge/进程 线程/死锁/operation/预防.md
@@ -1,6 +1,75 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 死锁预防
 
+<ul>
+
+> pro：死锁预防的特点（2019）
+
+预防死锁的发生只需破坏死锁产生的4个必要条件之一即可。
+
+### 破坏互斥条件
+- 如果将只能互斥使用的资源改造为允许共享使用，那么系统不会进入死锁状态
+- 但有些资源根本不能同时访问，如打印机等临界资源只能互斥使用
+- 所以，破环互厅条件而预防死锁的方法不太可行，而且为了系统安全，很多时候还必须保护这种互斥性
+
+### 破坏不可剥夺条件
+- 当一个已经保持了某些不可剥夺资源的进程，请求新的资源而得不到满足时：
+  - 必须释放已经保持的所有资源
+  - 待以后需要时再重新申请
+- 实现特点：
+  - 实现起来比较复杂
+  - 释放已获得的资源可能造成前一阶段工作的失效
+  - 常用于状态易于保存和恢复的资源(如CPU寄存器及内存资源)
+  - 一般不能用于打印机之类的资源
+  - 反复申请和释放资源会影响进程推进速度和系统吞吐量
+
+### 破坏请求并保持条件
+
+<ul>
+
+#### 实现方法
+
+<ul>
+
+##### 方法一：预先静态分配
+- 进程在运行前一次申请完所需全部资源
+- 资源未满足前不让投入运行
+- 运行期间不再提出资源请求
+
+##### 方法二：动态分配
+- 允许进程获得运行初期所需资源后开始运行
+- 逐步释放已使用完毕的资源后才能请求新资源
+
+</ul>
+
+#### 方法比较
+- 方法一：
+  - 实现简单
+  - 系统资源被严重浪费
+  - 可能导致"饥饿"现象
+- 方法二：
+  - 改进了方法一的缺点
+
+</ul>
+
+### 破坏循环等待条件
+
+<ul>
+
+#### 实现方法：顺序资源分配法
+- 给系统各类资源编号
+- 规定进程按编号递增顺序请求资源
+- 同类资源一次申请完
+
+#### 缺点
+- 编号必须相对稳定，不便于增加新设备
+- 实际使用顺序可能与编号次序不一致，造成资源浪费
+- 按规定次序申请给用户编程带来麻烦
+
+</ul>
+
+</ul>
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
 
