--- a/re_knowledge/进程 线程/进程 & 线程/控制 通信/控制.md
+++ b/re_knowledge/进程 线程/进程 & 线程/控制 通信/控制.md
@@ -1,5 +1,186 @@
 <div style="float: left; width: 64%; padding: 1%;">
 
+## 进程控制
+
+<ul>
+
+进程控制的主要功能是对系统中的所有进程实施有效的管理，它具有创建新进程、撤销已有进程、实现进程状态转换等功能。  
+在操作系统中，一般将进程控制用的程序段称为原语，原语的特点是执行期间不允许中断，它是一个不可分割的基本单位。
+
+### 进程的创建
+
+<ul>
+
+> pro：父进程与子进程的关系和特点（2020）
+
+#### 父子进程关系
+- 允许一个 längst
+
+进程创建另一个进程
+  - 创建者称为父进程
+  - 被创建的进程称为子进程
+- 资源关系
+  - 子进程可继承父进程资源
+  - 子进程撤销时归还资源给父进程
+  - 父进程撤销时通常同时撤销所有子进程
+
+> pro：导致创建进程的操作（2010）
+
+#### 创建触发事件
+- 终端用户登录系统
+- 作业调度
+- 系统提供服务
+- 用户程序的应用请求
+
+> pro：创建新进程时的操作（2021）
+
+#### 创建过程
+
+<ul>
+
+##### 分配标识与PCB
+- 分配唯一进程标识号
+- 申请空白PCB
+  - PCB申请失败则创建失败
+
+##### 资源分配
+- 分配运行所需资源
+  - 内存
+  - 文件
+  - I/O设备
+  - CPU时间
+- 资源来源
+  - 操作系统
+  - 父进程
+- 资源不足处理
+  - 进入创建态等待资源
+
+##### PCB初始化
+- 初始化标志信息
+- 初始化CPU状态信息
+- 初始化CPU控制信息
+- 设置进程优先级
+
+##### 就绪队列处理
+- 检查就绪队列是否可接纳
+- 插入就绪队列等待调度
+
+</ul>
+
+</ul>
+
+### 进程的终止
+
+<ul>
+
+#### 终止事件类型
+
+<ul>
+
+##### 正常结束
+- 任务完成并准备退出
+
+##### 异常结束
+- 存储区越界
+- 保护错
+- 非法指令
+- 特权指令错
+- 运行超时
+- 算术运算错
+- I/O故障
+
+##### 外界干预
+- 操作员干预
+- 操作系统干预
+- 父进程请求
+- 父进程终止
+
+</ul>
+
+> pro：终止进程时的操作（2024）
+
+#### 终止过程
+
+<ul>
+
+##### PCB处理
+- 检索进程PCB
+- 读取进程状态
+
+##### 运行状态处理
+- 终止运行状态进程执行
+- 分配CPU给其他进程
+
+##### 子进程处理
+- 终止所有子孙进程(系统要求不同)
+
+##### 资源回收
+- 归还资源给父进程
+- 归还资源给操作系统
+
+##### 队列更新
+- 从所在队列删除PCB
+
+</ul>
+
+</ul>
+
+### 进程的阻塞和唤醒
+
+<ul>
+
+> pro：进程阻塞的事件与时机（2018、2022、2023）
+
+> pro：I/O事件阻塞或唤醒进程的过程（2023）
+
+#### 阻塞机制
+
+<ul>
+
+##### 阻塞原因
+- 请求系统资源失败
+- 等待操作完成
+- 新数据未到达
+- 无新任务可做
+
+##### 阻塞特点
+- 是进程的主动行为
+- 仅运行态进程可转为阻塞态
+
+##### 阻塞过程
+- 查找进程PCB
+- 保护运行态进程现场
+- 转换状态为阻塞态
+- 插入等待队列
+- 调度CPU给其他进程
+
+</ul>
+
+> pro：进程唤醒的事件与时机（2014、2019）
+
+#### 唤醒机制
+
+<ul>
+
+##### 唤醒条件
+- I/O操作完成
+- 所需数据到达
+
+##### 唤醒过程
+- 查找等待队列中的PCB
+- 将进程转为就绪态
+- 插入就绪队列等待调度
+
+</ul>
+
+#### 原语使用要求
+- Block和Wakeup必须成对使用
+- 必须在相关进程中安排对应唤醒原语
+- 避免进程永久阻塞
+
+</ul>
+
+</ul>
 
 </div>
 <div style="float: right; width: 26%; padding: 1%;">
